--- a/src/styles/radix-colors/gray.css
+++ b/src/styles/radix-colors/gray.css
@@ -41,104 +41,104 @@
 [data-primary="gray"] .dark  */
 
 [data-primary="gray"] {
-  --primary-1: var(--gray-1);
-  --primary-2: var(--gray-2);
-  --primary-3: var(--gray-3);
-  --primary-4: var(--gray-4);
-  --primary-5: var(--gray-5);
-  --primary-6: var(--gray-6);
-  --primary-7: var(--gray-7);
-  --primary-8: var(--gray-8);
-  --primary-9: var(--gray-9);
-  --primary-10: var(--gray-10);
-  --primary-11: var(--gray-11);
-  --primary-12: var(--gray-12);
+  --color-primary-1: var(--gray-1);
+  --color-primary-2: var(--gray-2);
+  --color-primary-3: var(--gray-3);
+  --color-primary-4: var(--gray-4);
+  --color-primary-5: var(--gray-5);
+  --color-primary-6: var(--gray-6);
+  --color-primary-7: var(--gray-7);
+  --color-primary-8: var(--gray-8);
+  --color-primary-9: var(--gray-9);
+  --color-primary-10: var(--gray-10);
+  --color-primary-11: var(--gray-11);
+  --color-primary-12: var(--gray-12);
 
-  --primary-a1: var(--gray-a1);
-  --primary-a2: var(--gray-a2);
-  --primary-a3: var(--gray-a3);
-  --primary-a4: var(--gray-a4);
-  --primary-a5: var(--gray-a5);
-  --primary-a6: var(--gray-a6);
-  --primary-a7: var(--gray-a7);
-  --primary-a8: var(--gray-a8);
-  --primary-a9: var(--gray-a9);
-  --primary-a10: var(--gray-a10);
-  --primary-a11: var(--gray-a11);
-  --primary-a12: var(--gray-a12);
+  --color-primary-a1: var(--gray-a1);
+  --color-primary-a2: var(--gray-a2);
+  --color-primary-a3: var(--gray-a3);
+  --color-primary-a4: var(--gray-a4);
+  --color-primary-a5: var(--gray-a5);
+  --color-primary-a6: var(--gray-a6);
+  --color-primary-a7: var(--gray-a7);
+  --color-primary-a8: var(--gray-a8);
+  --color-primary-a9: var(--gray-a9);
+  --color-primary-a10: var(--gray-a10);
+  --color-primary-a11: var(--gray-a11);
+  --color-primary-a12: var(--gray-a12);
 
-  --primary-contrast: var(--gray-contrast);
-  --primary-surface: var(--gray-surface);
-  --primary-indicator: var(--gray-indicator);
-  --primary-track: var(--gray-track);
+  --color-primary-contrast: var(--gray-contrast);
+  --color-primary-surface: var(--gray-surface);
+  --color-primary-indicator: var(--gray-indicator);
+  --color-primary-track: var(--gray-track);
 }
 
 [data-secondary="gray"] {
-  --secondary-1: var(--gray-1);
-  --secondary-2: var(--gray-2);
-  --secondary-3: var(--gray-3);
-  --secondary-4: var(--gray-4);
-  --secondary-5: var(--gray-5);
-  --secondary-6: var(--gray-6);
-  --secondary-7: var(--gray-7);
-  --secondary-8: var(--gray-8);
-  --secondary-9: var(--gray-9);
-  --secondary-10: var(--gray-10);
-  --secondary-11: var(--gray-11);
-  --secondary-12: var(--gray-12);
+  --color-secondary-1: var(--gray-1);
+  --color-secondary-2: var(--gray-2);
+  --color-secondary-3: var(--gray-3);
+  --color-secondary-4: var(--gray-4);
+  --color-secondary-5: var(--gray-5);
+  --color-secondary-6: var(--gray-6);
+  --color-secondary-7: var(--gray-7);
+  --color-secondary-8: var(--gray-8);
+  --color-secondary-9: var(--gray-9);
+  --color-secondary-10: var(--gray-10);
+  --color-secondary-11: var(--gray-11);
+  --color-secondary-12: var(--gray-12);
 
-  --secondary-a1: var(--gray-a1);
-  --secondary-a2: var(--gray-a2);
-  --secondary-a3: var(--gray-a3);
-  --secondary-a4: var(--gray-a4);
-  --secondary-a5: var(--gray-a5);
-  --secondary-a6: var(--gray-a6);
-  --secondary-a7: var(--gray-a7);
-  --secondary-a8: var(--gray-a8);
-  --secondary-a9: var(--gray-a9);
-  --secondary-a10: var(--gray-a10);
-  --secondary-a11: var(--gray-a11);
-  --secondary-a12: var(--gray-a12);
+  --color-secondary-a1: var(--gray-a1);
+  --color-secondary-a2: var(--gray-a2);
+  --color-secondary-a3: var(--gray-a3);
+  --color-secondary-a4: var(--gray-a4);
+  --color-secondary-a5: var(--gray-a5);
+  --color-secondary-a6: var(--gray-a6);
+  --color-secondary-a7: var(--gray-a7);
+  --color-secondary-a8: var(--gray-a8);
+  --color-secondary-a9: var(--gray-a9);
+  --color-secondary-a10: var(--gray-a10);
+  --color-secondary-a11: var(--gray-a11);
+  --color-secondary-a12: var(--gray-a12);
 
-  --secondary-contrast: var(--gray-contrast);
-  --secondary-surface: var(--gray-surface);
-  --secondary-indicator: var(--gray-indicator);
-  --secondary-track: var(--gray-track);
+  --color-secondary-contrast: var(--gray-contrast);
+  --color-secondary-surface: var(--gray-surface);
+  --color-secondary-indicator: var(--gray-indicator);
+  --color-secondary-track: var(--gray-track);
 }
 
 [data-surface="gray"] {
-  --surface-1: var(--gray-1);
-  --surface-2: var(--gray-2);
-  --surface-3: var(--gray-3);
-  --surface-4: var(--gray-4);
-  --surface-5: var(--gray-5);
-  --surface-6: var(--gray-6);
-  --surface-7: var(--gray-7);
-  --surface-8: var(--gray-8);
-  --surface-9: var(--gray-9);
-  --surface-10: var(--gray-10);
-  --surface-11: var(--gray-11);
-  --surface-12: var(--gray-12);
+  --color-surface-1: var(--gray-1);
+  --color-surface-2: var(--gray-2);
+  --color-surface-3: var(--gray-3);
+  --color-surface-4: var(--gray-4);
+  --color-surface-5: var(--gray-5);
+  --color-surface-6: var(--gray-6);
+  --color-surface-7: var(--gray-7);
+  --color-surface-8: var(--gray-8);
+  --color-surface-9: var(--gray-9);
+  --color-surface-10: var(--gray-10);
+  --color-surface-11: var(--gray-11);
+  --color-surface-12: var(--gray-12);
 
-  --surface-a1: var(--gray-a1);
-  --surface-a2: var(--gray-a2);
-  --surface-a3: var(--gray-a3);
-  --surface-a4: var(--gray-a4);
-  --surface-a5: var(--gray-a5);
-  --surface-a6: var(--gray-a6);
-  --surface-a7: var(--gray-a7);
-  --surface-a8: var(--gray-a8);
-  --surface-a9: var(--gray-a9);
-  --surface-a10: var(--gray-a10);
-  --surface-a11: var(--gray-a11);
-  --surface-a12: var(--gray-a12);
+  --color-surface-a1: var(--gray-a1);
+  --color-surface-a2: var(--gray-a2);
+  --color-surface-a3: var(--gray-a3);
+  --color-surface-a4: var(--gray-a4);
+  --color-surface-a5: var(--gray-a5);
+  --color-surface-a6: var(--gray-a6);
+  --color-surface-a7: var(--gray-a7);
+  --color-surface-a8: var(--gray-a8);
+  --color-surface-a9: var(--gray-a9);
+  --color-surface-a10: var(--gray-a10);
+  --color-surface-a11: var(--gray-a11);
+  --color-surface-a12: var(--gray-a12);
 
-  --surface-contrast: var(--gray-contrast);
-  --surface-surface: var(--gray-surface);
-  --surface-indicator: var(--gray-indicator);
-  --surface-track: var(--gray-track);
+  --color-surface-contrast: var(--gray-contrast);
+  --color-surface-surface: var(--gray-surface);
+  --color-surface-indicator: var(--gray-indicator);
+  --color-surface-track: var(--gray-track);
 
   /* TODO: replace this with hack from ui.pub */
-  --border-color: var(--surface-a3);
-  --shadow-color: var(--surface-a2);
+  --border-color: var(--color-surface-a3);
+  --shadow-color: var(--color-surface-a2);
 }
