--- a/src/styles/radix-colors/mauve.css
+++ b/src/styles/radix-colors/mauve.css
@@ -35,38 +35,38 @@
 }
 
 [data-surface="mauve"] {
-  --surface-1: var(--mauve-1);
-  --surface-2: var(--mauve-2);
-  --surface-3: var(--mauve-3);
-  --surface-4: var(--mauve-4);
-  --surface-5: var(--mauve-5);
-  --surface-6: var(--mauve-6);
-  --surface-7: var(--mauve-7);
-  --surface-8: var(--mauve-8);
-  --surface-9: var(--mauve-9);
-  --surface-10: var(--mauve-10);
-  --surface-11: var(--mauve-11);
-  --surface-12: var(--mauve-12);
+  --color-surface-1: var(--mauve-1);
+  --color-surface-2: var(--mauve-2);
+  --color-surface-3: var(--mauve-3);
+  --color-surface-4: var(--mauve-4);
+  --color-surface-5: var(--mauve-5);
+  --color-surface-6: var(--mauve-6);
+  --color-surface-7: var(--mauve-7);
+  --color-surface-8: var(--mauve-8);
+  --color-surface-9: var(--mauve-9);
+  --color-surface-10: var(--mauve-10);
+  --color-surface-11: var(--mauve-11);
+  --color-surface-12: var(--mauve-12);
 
-  --surface-a1: var(--mauve-a1);
-  --surface-a2: var(--mauve-a2);
-  --surface-a3: var(--mauve-a3);
-  --surface-a4: var(--mauve-a4);
-  --surface-a5: var(--mauve-a5);
-  --surface-a6: var(--mauve-a6);
-  --surface-a7: var(--mauve-a7);
-  --surface-a8: var(--mauve-a8);
-  --surface-a9: var(--mauve-a9);
-  --surface-a10: var(--mauve-a10);
-  --surface-a11: var(--mauve-a11);
-  --surface-a12: var(--mauve-a12);
+  --color-surface-a1: var(--mauve-a1);
+  --color-surface-a2: var(--mauve-a2);
+  --color-surface-a3: var(--mauve-a3);
+  --color-surface-a4: var(--mauve-a4);
+  --color-surface-a5: var(--mauve-a5);
+  --color-surface-a6: var(--mauve-a6);
+  --color-surface-a7: var(--mauve-a7);
+  --color-surface-a8: var(--mauve-a8);
+  --color-surface-a9: var(--mauve-a9);
+  --color-surface-a10: var(--mauve-a10);
+  --color-surface-a11: var(--mauve-a11);
+  --color-surface-a12: var(--mauve-a12);
 
-  --surface-contrast: var(--mauve-contrast);
-  --surface-surface: var(--mauve-surface);
-  --surface-indicator: var(--mauve-indicator);
-  --surface-track: var(--mauve-track);
+  --color-surface-contrast: var(--mauve-contrast);
+  --color-surface-surface: var(--mauve-surface);
+  --color-surface-indicator: var(--mauve-indicator);
+  --color-surface-track: var(--mauve-track);
 
   /* TODO: replace this with hack from ui.pub */
-  --border-color: var(--surface-a3);
-  --shadow-color: var(--surface-a2);
+  --border-color: var(--color-surface-a3);
+  --shadow-color: var(--color-surface-a2);
 }
