--- a/src/styles/radix-colors/mint.css
+++ b/src/styles/radix-colors/mint.css
@@ -38,67 +38,67 @@
 }
 
 [data-primary="mint"] {
-  --primary-1: var(--mint-1);
-  --primary-2: var(--mint-2);
-  --primary-3: var(--mint-3);
-  --primary-4: var(--mint-4);
-  --primary-5: var(--mint-5);
-  --primary-6: var(--mint-6);
-  --primary-7: var(--mint-7);
-  --primary-8: var(--mint-8);
-  --primary-9: var(--mint-9);
-  --primary-10: var(--mint-10);
-  --primary-11: var(--mint-11);
-  --primary-12: var(--mint-12);
+  --color-primary-1: var(--mint-1);
+  --color-primary-2: var(--mint-2);
+  --color-primary-3: var(--mint-3);
+  --color-primary-4: var(--mint-4);
+  --color-primary-5: var(--mint-5);
+  --color-primary-6: var(--mint-6);
+  --color-primary-7: var(--mint-7);
+  --color-primary-8: var(--mint-8);
+  --color-primary-9: var(--mint-9);
+  --color-primary-10: var(--mint-10);
+  --color-primary-11: var(--mint-11);
+  --color-primary-12: var(--mint-12);
 
-  --primary-a1: var(--mint-a1);
-  --primary-a2: var(--mint-a2);
-  --primary-a3: var(--mint-a3);
-  --primary-a4: var(--mint-a4);
-  --primary-a5: var(--mint-a5);
-  --primary-a6: var(--mint-a6);
-  --primary-a7: var(--mint-a7);
-  --primary-a8: var(--mint-a8);
-  --primary-a9: var(--mint-a9);
-  --primary-a10: var(--mint-a10);
-  --primary-a11: var(--mint-a11);
-  --primary-a12: var(--mint-a12);
+  --color-primary-a1: var(--mint-a1);
+  --color-primary-a2: var(--mint-a2);
+  --color-primary-a3: var(--mint-a3);
+  --color-primary-a4: var(--mint-a4);
+  --color-primary-a5: var(--mint-a5);
+  --color-primary-a6: var(--mint-a6);
+  --color-primary-a7: var(--mint-a7);
+  --color-primary-a8: var(--mint-a8);
+  --color-primary-a9: var(--mint-a9);
+  --color-primary-a10: var(--mint-a10);
+  --color-primary-a11: var(--mint-a11);
+  --color-primary-a12: var(--mint-a12);
 
-  --primary-contrast: var(--mint-contrast);
-  --primary-surface: var(--mint-surface);
-  --primary-indicator: var(--mint-indicator);
-  --primary-track: var(--mint-track);
+  --color-primary-contrast: var(--mint-contrast);
+  --color-primary-surface: var(--mint-surface);
+  --color-primary-indicator: var(--mint-indicator);
+  --color-primary-track: var(--mint-track);
 }
 
 [data-secondary="mint"] {
-  --secondary-1: var(--mint-1);
-  --secondary-2: var(--mint-2);
-  --secondary-3: var(--mint-3);
-  --secondary-4: var(--mint-4);
-  --secondary-5: var(--mint-5);
-  --secondary-6: var(--mint-6);
-  --secondary-7: var(--mint-7);
-  --secondary-8: var(--mint-8);
-  --secondary-9: var(--mint-9);
-  --secondary-10: var(--mint-10);
-  --secondary-11: var(--mint-11);
-  --secondary-12: var(--mint-12);
+  --color-secondary-1: var(--mint-1);
+  --color-secondary-2: var(--mint-2);
+  --color-secondary-3: var(--mint-3);
+  --color-secondary-4: var(--mint-4);
+  --color-secondary-5: var(--mint-5);
+  --color-secondary-6: var(--mint-6);
+  --color-secondary-7: var(--mint-7);
+  --color-secondary-8: var(--mint-8);
+  --color-secondary-9: var(--mint-9);
+  --color-secondary-10: var(--mint-10);
+  --color-secondary-11: var(--mint-11);
+  --color-secondary-12: var(--mint-12);
 
-  --secondary-a1: var(--mint-a1);
-  --secondary-a2: var(--mint-a2);
-  --secondary-a3: var(--mint-a3);
-  --secondary-a4: var(--mint-a4);
-  --secondary-a5: var(--mint-a5);
-  --secondary-a6: var(--mint-a6);
-  --secondary-a7: var(--mint-a7);
-  --secondary-a8: var(--mint-a8);
-  --secondary-a9: var(--mint-a9);
-  --secondary-a10: var(--mint-a10);
-  --secondary-a11: var(--mint-a11);
-  --secondary-a12: var(--mint-a12);
+  --color-secondary-a1: var(--mint-a1);
+  --color-secondary-a2: var(--mint-a2);
+  --color-secondary-a3: var(--mint-a3);
+  --color-secondary-a4: var(--mint-a4);
+  --color-secondary-a5: var(--mint-a5);
+  --color-secondary-a6: var(--mint-a6);
+  --color-secondary-a7: var(--mint-a7);
+  --color-secondary-a8: var(--mint-a8);
+  --color-secondary-a9: var(--mint-a9);
+  --color-secondary-a10: var(--mint-a10);
+  --color-secondary-a11: var(--mint-a11);
+  --color-secondary-a12: var(--mint-a12);
 
-  --secondary-contrast: var(--mint-contrast);
-  --secondary-surface: var(--mint-surface);
-  --secondary-indicator: var(--mint-indicator);
-  --secondary-track: var(--mint-track);
+  --color-secondary-contrast: var(--mint-contrast);
+  --color-secondary-surface: var(--mint-surface);
+  --color-secondary-indicator: var(--mint-indicator);
+  --color-secondary-track: var(--mint-track);
 }
