--- a/src/styles/radix-colors/ruby.css
+++ b/src/styles/radix-colors/ruby.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="ruby"] {
-  --primary-1: var(--ruby-1);
-  --primary-2: var(--ruby-2);
-  --primary-3: var(--ruby-3);
-  --primary-4: var(--ruby-4);
-  --primary-5: var(--ruby-5);
-  --primary-6: var(--ruby-6);
-  --primary-7: var(--ruby-7);
-  --primary-8: var(--ruby-8);
-  --primary-9: var(--ruby-9);
-  --primary-10: var(--ruby-10);
-  --primary-11: var(--ruby-11);
-  --primary-12: var(--ruby-12);
+  --color-primary-1: var(--ruby-1);
+  --color-primary-2: var(--ruby-2);
+  --color-primary-3: var(--ruby-3);
+  --color-primary-4: var(--ruby-4);
+  --color-primary-5: var(--ruby-5);
+  --color-primary-6: var(--ruby-6);
+  --color-primary-7: var(--ruby-7);
+  --color-primary-8: var(--ruby-8);
+  --color-primary-9: var(--ruby-9);
+  --color-primary-10: var(--ruby-10);
+  --color-primary-11: var(--ruby-11);
+  --color-primary-12: var(--ruby-12);
 
-  --primary-a1: var(--ruby-a1);
-  --primary-a2: var(--ruby-a2);
-  --primary-a3: var(--ruby-a3);
-  --primary-a4: var(--ruby-a4);
-  --primary-a5: var(--ruby-a5);
-  --primary-a6: var(--ruby-a6);
-  --primary-a7: var(--ruby-a7);
-  --primary-a8: var(--ruby-a8);
-  --primary-a9: var(--ruby-a9);
-  --primary-a10: var(--ruby-a10);
-  --primary-a11: var(--ruby-a11);
-  --primary-a12: var(--ruby-a12);
+  --color-primary-a1: var(--ruby-a1);
+  --color-primary-a2: var(--ruby-a2);
+  --color-primary-a3: var(--ruby-a3);
+  --color-primary-a4: var(--ruby-a4);
+  --color-primary-a5: var(--ruby-a5);
+  --color-primary-a6: var(--ruby-a6);
+  --color-primary-a7: var(--ruby-a7);
+  --color-primary-a8: var(--ruby-a8);
+  --color-primary-a9: var(--ruby-a9);
+  --color-primary-a10: var(--ruby-a10);
+  --color-primary-a11: var(--ruby-a11);
+  --color-primary-a12: var(--ruby-a12);
 
-  --primary-contrast: var(--ruby-contrast);
-  --primary-surface: var(--ruby-surface);
-  --primary-indicator: var(--ruby-indicator);
-  --primary-track: var(--ruby-track);
+  --color-primary-contrast: var(--ruby-contrast);
+  --color-primary-surface: var(--ruby-surface);
+  --color-primary-indicator: var(--ruby-indicator);
+  --color-primary-track: var(--ruby-track);
 }
 
 [data-secondary="ruby"] {
-  --secondary-1: var(--ruby-1);
-  --secondary-2: var(--ruby-2);
-  --secondary-3: var(--ruby-3);
-  --secondary-4: var(--ruby-4);
-  --secondary-5: var(--ruby-5);
-  --secondary-6: var(--ruby-6);
-  --secondary-7: var(--ruby-7);
-  --secondary-8: var(--ruby-8);
-  --secondary-9: var(--ruby-9);
-  --secondary-10: var(--ruby-10);
-  --secondary-11: var(--ruby-11);
-  --secondary-12: var(--ruby-12);
+  --color-secondary-1: var(--ruby-1);
+  --color-secondary-2: var(--ruby-2);
+  --color-secondary-3: var(--ruby-3);
+  --color-secondary-4: var(--ruby-4);
+  --color-secondary-5: var(--ruby-5);
+  --color-secondary-6: var(--ruby-6);
+  --color-secondary-7: var(--ruby-7);
+  --color-secondary-8: var(--ruby-8);
+  --color-secondary-9: var(--ruby-9);
+  --color-secondary-10: var(--ruby-10);
+  --color-secondary-11: var(--ruby-11);
+  --color-secondary-12: var(--ruby-12);
 
-  --secondary-a1: var(--ruby-a1);
-  --secondary-a2: var(--ruby-a2);
-  --secondary-a3: var(--ruby-a3);
-  --secondary-a4: var(--ruby-a4);
-  --secondary-a5: var(--ruby-a5);
-  --secondary-a6: var(--ruby-a6);
-  --secondary-a7: var(--ruby-a7);
-  --secondary-a8: var(--ruby-a8);
-  --secondary-a9: var(--ruby-a9);
-  --secondary-a10: var(--ruby-a10);
-  --secondary-a11: var(--ruby-a11);
-  --secondary-a12: var(--ruby-a12);
+  --color-secondary-a1: var(--ruby-a1);
+  --color-secondary-a2: var(--ruby-a2);
+  --color-secondary-a3: var(--ruby-a3);
+  --color-secondary-a4: var(--ruby-a4);
+  --color-secondary-a5: var(--ruby-a5);
+  --color-secondary-a6: var(--ruby-a6);
+  --color-secondary-a7: var(--ruby-a7);
+  --color-secondary-a8: var(--ruby-a8);
+  --color-secondary-a9: var(--ruby-a9);
+  --color-secondary-a10: var(--ruby-a10);
+  --color-secondary-a11: var(--ruby-a11);
+  --color-secondary-a12: var(--ruby-a12);
 
-  --secondary-contrast: var(--ruby-contrast);
-  --secondary-surface: var(--ruby-surface);
-  --secondary-indicator: var(--ruby-indicator);
-  --secondary-track: var(--ruby-track);
+  --color-secondary-contrast: var(--ruby-contrast);
+  --color-secondary-surface: var(--ruby-surface);
+  --color-secondary-indicator: var(--ruby-indicator);
+  --color-secondary-track: var(--ruby-track);
 }
