--- a/src/styles/radix-colors/sand.css
+++ b/src/styles/radix-colors/sand.css
@@ -45,39 +45,39 @@
 [data-surface="sand"] .dark  */
 
 [data-surface="sand"] {
-  --surface-1: var(--sand-1);
-  --surface-2: var(--sand-2);
-  --surface-3: var(--sand-3);
-  --surface-4: var(--sand-4);
-  --surface-5: var(--sand-5);
-  --surface-6: var(--sand-6);
-  --surface-7: var(--sand-7);
-  --surface-8: var(--sand-8);
-  --surface-9: var(--sand-9);
-  --surface-10: var(--sand-10);
-  --surface-11: var(--sand-11);
-  --surface-12: var(--sand-12);
+  --color-surface-1: var(--sand-1);
+  --color-surface-2: var(--sand-2);
+  --color-surface-3: var(--sand-3);
+  --color-surface-4: var(--sand-4);
+  --color-surface-5: var(--sand-5);
+  --color-surface-6: var(--sand-6);
+  --color-surface-7: var(--sand-7);
+  --color-surface-8: var(--sand-8);
+  --color-surface-9: var(--sand-9);
+  --color-surface-10: var(--sand-10);
+  --color-surface-11: var(--sand-11);
+  --color-surface-12: var(--sand-12);
 
-  --surface-a1: var(--sand-a1);
-  --surface-a2: var(--sand-a2);
-  --surface-a3: var(--sand-a3);
-  --surface-a4: var(--sand-a4);
-  --surface-a5: var(--sand-a5);
-  --surface-a6: var(--sand-a6);
-  --surface-a7: var(--sand-a7);
-  --surface-a8: var(--sand-a8);
-  --surface-a9: var(--sand-a9);
-  --surface-a10: var(--sand-a10);
-  --surface-a11: var(--sand-a11);
-  --surface-a12: var(--sand-a12);
+  --color-surface-a1: var(--sand-a1);
+  --color-surface-a2: var(--sand-a2);
+  --color-surface-a3: var(--sand-a3);
+  --color-surface-a4: var(--sand-a4);
+  --color-surface-a5: var(--sand-a5);
+  --color-surface-a6: var(--sand-a6);
+  --color-surface-a7: var(--sand-a7);
+  --color-surface-a8: var(--sand-a8);
+  --color-surface-a9: var(--sand-a9);
+  --color-surface-a10: var(--sand-a10);
+  --color-surface-a11: var(--sand-a11);
+  --color-surface-a12: var(--sand-a12);
 
-  --surface-contrast: var(--sand-contrast);
-  --surface-surface: var(--sand-surface);
-  --surface-indicator: var(--sand-indicator);
-  --surface-track: var(--sand-track);
-  --surface-backdrop: var(--sand-backdrop);
+  --color-surface-contrast: var(--sand-contrast);
+  --color-surface-surface: var(--sand-surface);
+  --color-surface-indicator: var(--sand-indicator);
+  --color-surface-track: var(--sand-track);
+  --color-surface-backdrop: var(--sand-backdrop);
 
   /* TODO: replace this with hack from ui.pub */
-  --border-color: var(--surface-a3);
-  --shadow-color: var(--surface-a2);
+  --border-color: var(--color-surface-a3);
+  --shadow-color: var(--color-surface-a2);
 }
