--- a/src/styles/radix-colors/slate.css
+++ b/src/styles/radix-colors/slate.css
@@ -35,38 +35,38 @@
 }
 
 [data-surface="slate"] {
-  --surface-1: var(--slate-1);
-  --surface-2: var(--slate-2);
-  --surface-3: var(--slate-3);
-  --surface-4: var(--slate-4);
-  --surface-5: var(--slate-5);
-  --surface-6: var(--slate-6);
-  --surface-7: var(--slate-7);
-  --surface-8: var(--slate-8);
-  --surface-9: var(--slate-9);
-  --surface-10: var(--slate-10);
-  --surface-11: var(--slate-11);
-  --surface-12: var(--slate-12);
+  --color-surface-1: var(--slate-1);
+  --color-surface-2: var(--slate-2);
+  --color-surface-3: var(--slate-3);
+  --color-surface-4: var(--slate-4);
+  --color-surface-5: var(--slate-5);
+  --color-surface-6: var(--slate-6);
+  --color-surface-7: var(--slate-7);
+  --color-surface-8: var(--slate-8);
+  --color-surface-9: var(--slate-9);
+  --color-surface-10: var(--slate-10);
+  --color-surface-11: var(--slate-11);
+  --color-surface-12: var(--slate-12);
 
-  --surface-a1: var(--slate-a1);
-  --surface-a2: var(--slate-a2);
-  --surface-a3: var(--slate-a3);
-  --surface-a4: var(--slate-a4);
-  --surface-a5: var(--slate-a5);
-  --surface-a6: var(--slate-a6);
-  --surface-a7: var(--slate-a7);
-  --surface-a8: var(--slate-a8);
-  --surface-a9: var(--slate-a9);
-  --surface-a10: var(--slate-a10);
-  --surface-a11: var(--slate-a11);
-  --surface-a12: var(--slate-a12);
+  --color-surface-a1: var(--slate-a1);
+  --color-surface-a2: var(--slate-a2);
+  --color-surface-a3: var(--slate-a3);
+  --color-surface-a4: var(--slate-a4);
+  --color-surface-a5: var(--slate-a5);
+  --color-surface-a6: var(--slate-a6);
+  --color-surface-a7: var(--slate-a7);
+  --color-surface-a8: var(--slate-a8);
+  --color-surface-a9: var(--slate-a9);
+  --color-surface-a10: var(--slate-a10);
+  --color-surface-a11: var(--slate-a11);
+  --color-surface-a12: var(--slate-a12);
 
-  --surface-contrast: var(--slate-contrast);
-  --surface-surface: var(--slate-surface);
-  --surface-indicator: var(--slate-indicator);
-  --surface-track: var(--slate-track);
+  --color-surface-contrast: var(--slate-contrast);
+  --color-surface-surface: var(--slate-surface);
+  --color-surface-indicator: var(--slate-indicator);
+  --color-surface-track: var(--slate-track);
 
   /* TODO: replace this with hack from ui.pub */
-  --border-color: var(--surface-a3);
-  --shadow-color: var(--surface-a2);
+  --border-color: var(--color-surface-a3);
+  --shadow-color: var(--color-surface-a2);
 }
