--- a/src/styles/_theme/_browser.css
+++ b/src/styles/_theme/_browser.css
@@ -9,10 +9,10 @@
 
 ::-webkit-scrollbar-thumb {
   cursor: grab;
-  background-color: var(--surface-a8);
+  background-color: var(--color-surface-a8);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--surface-a9);
+  background-color: var(--color-surface-a9);
 }
 ::-webkit-scrollbar-thumb:active {
   cursor: grabbing;
@@ -28,7 +28,7 @@
 ::-webkit-scrollbar-track {
   cursor: grab;
   /* margin: 0.5rem 0; */
-  background-color: var(--surface-a3);
+  background-color: var(--color-surface-a3);
 }
 ::-webkit-scrollbar-track:active {
   cursor: grabbing;
@@ -77,10 +77,10 @@ textarea::-webkit-scrollbar {
 
 textarea::-webkit-scrollbar-thumb {
   cursor: grab;
-  background-color: var(--surface-a8);
+  background-color: var(--color-surface-a8);
 }
 textarea::-webkit-scrollbar-thumb:hover {
-  background-color: var(--surface-a9);
+  background-color: var(--color-surface-a9);
 }
 textarea::-webkit-scrollbar-thumb:active {
   cursor: grabbing;
@@ -96,7 +96,7 @@ textarea::-webkit-scrollbar-track {
 textarea::-webkit-scrollbar-track {
   cursor: grab;
   margin: 0.25rem 0;
-  background-color: var(--surface-a3);
+  background-color: var(--color-surface-a3);
 }
 textarea::-webkit-scrollbar-track:active {
   cursor: grabbing;
@@ -116,12 +116,12 @@ input:-webkit-autofill,
 /* input:-webkit-autofill:hover, */
 /* input:-webkit-autofill:focus, */
 input:-webkit-autofill:active {
-  -webkit-text-fill-color: var(--surface-12);
+  -webkit-text-fill-color: var(--color-surface-12);
   /* transition: background-color 5000s ease-in-out 0s; */
   transition: background-color 0s 50000s;
-  box-shadow: inset 0 0 20px 20px var(--surface-a2);
+  box-shadow: inset 0 0 20px 20px var(--color-surface-a2);
   -webkit-background-clip: text;
-  caret-color: var(--surface-12);
+  caret-color: var(--color-surface-12);
 }
 
 /*******/
@@ -135,10 +135,10 @@ pre::-webkit-scrollbar {
 
 pre::-webkit-scrollbar-thumb {
   cursor: grab;
-  background-color: var(--surface-a8);
+  background-color: var(--color-surface-a8);
 }
 pre::-webkit-scrollbar-thumb:hover {
-  background-color: var(--surface-a9);
+  background-color: var(--color-surface-a9);
 }
 pre::-webkit-scrollbar-thumb:active {
   cursor: grabbing;
@@ -154,7 +154,7 @@ pre::-webkit-scrollbar-track {
 pre::-webkit-scrollbar-track {
   cursor: grab;
   /* margin: 0.5rem 0; */
-  background-color: var(--surface-a3);
+  background-color: var(--color-surface-a3);
 }
 pre::-webkit-scrollbar-track:active {
   cursor: grabbing;
