--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -23,8 +23,8 @@
     --fill-available: -webkit-fill-available;
     --safe-area-inset-top: env(safe-area-inset-top);
     --safe-area-inset-bottom: env(safe-area-inset-bottom);
-    --selection-background-color: var(--primary-3);
-    --selection-color: var(--primary-11);
+    --selection-background-color: var(--color-primary-3);
+    --selection-color: var(--color-primary-11);
   }
 
   html,
@@ -38,8 +38,8 @@
   }
 
   body {
-    background-color: var(--surface-1);
-    color: var(--surface-12);
+    background-color: var(--color-surface-1);
+    color: var(--color-surface-12);
     /* font-family: var(--font-sans); */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -68,10 +68,10 @@
 
   ::-webkit-scrollbar-thumb {
     cursor: grab;
-    background-color: var(--surface-a8);
+    background-color: var(--color-surface-a8);
   }
   ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--surface-a9);
+    background-color: var(--color-surface-a9);
   }
   ::-webkit-scrollbar-thumb:active {
     cursor: grabbing;
@@ -87,7 +87,7 @@
   ::-webkit-scrollbar-track {
     cursor: grab;
     /* margin: 0.5rem 0; */
-    background-color: var(--surface-a3);
+    background-color: var(--color-surface-a3);
   }
   ::-webkit-scrollbar-track:active {
     cursor: grabbing;
@@ -136,10 +136,10 @@
 
   textarea::-webkit-scrollbar-thumb {
     cursor: grab;
-    background-color: var(--surface-a8);
+    background-color: var(--color-surface-a8);
   }
   textarea::-webkit-scrollbar-thumb:hover {
-    background-color: var(--surface-a9);
+    background-color: var(--color-surface-a9);
   }
   textarea::-webkit-scrollbar-thumb:active {
     cursor: grabbing;
@@ -155,7 +155,7 @@
   textarea::-webkit-scrollbar-track {
     cursor: grab;
     margin: 0.25rem 0;
-    background-color: var(--surface-a3);
+    background-color: var(--color-surface-a3);
   }
   textarea::-webkit-scrollbar-track:active {
     cursor: grabbing;
@@ -175,12 +175,12 @@
   /* input:-webkit-autofill:hover, */
   /* input:-webkit-autofill:focus, */
   input:-webkit-autofill:active {
-    -webkit-text-fill-color: var(--surface-12);
+    -webkit-text-fill-color: var(--color-surface-12);
     /* transition: background-color 5000s ease-in-out 0s; */
     transition: background-color 0s 50000s;
-    box-shadow: inset 0 0 20px 20px var(--surface-a2);
+    box-shadow: inset 0 0 20px 20px var(--color-surface-a2);
     -webkit-background-clip: text;
-    caret-color: var(--surface-12);
+    caret-color: var(--color-surface-12);
   }
 
   /*******/
@@ -194,10 +194,10 @@
 
   pre::-webkit-scrollbar-thumb {
     cursor: grab;
-    background-color: var(--surface-a8);
+    background-color: var(--color-surface-a8);
   }
   pre::-webkit-scrollbar-thumb:hover {
-    background-color: var(--surface-a9);
+    background-color: var(--color-surface-a9);
   }
   pre::-webkit-scrollbar-thumb:active {
     cursor: grabbing;
@@ -213,7 +213,7 @@
   pre::-webkit-scrollbar-track {
     cursor: grab;
     /* margin: 0.5rem 0; */
-    background-color: var(--surface-a3);
+    background-color: var(--color-surface-a3);
   }
   pre::-webkit-scrollbar-track:active {
     cursor: grabbing;
