--- a/src/styles/radix-colors/amber.css
+++ b/src/styles/radix-colors/amber.css
@@ -40,67 +40,67 @@
 /* https://github.com/radix-ui/themes/blob/main/packages/radix-ui-themes/src/styles/tokens/color.css#L143 */
 
 [data-primary="amber"] {
-  --primary-1: var(--amber-1);
-  --primary-2: var(--amber-2);
-  --primary-3: var(--amber-3);
-  --primary-4: var(--amber-4);
-  --primary-5: var(--amber-5);
-  --primary-6: var(--amber-6);
-  --primary-7: var(--amber-7);
-  --primary-8: var(--amber-8);
-  --primary-9: var(--amber-9);
-  --primary-10: var(--amber-10);
-  --primary-11: var(--amber-11);
-  --primary-12: var(--amber-12);
+  --color-primary-1: var(--amber-1);
+  --color-primary-2: var(--amber-2);
+  --color-primary-3: var(--amber-3);
+  --color-primary-4: var(--amber-4);
+  --color-primary-5: var(--amber-5);
+  --color-primary-6: var(--amber-6);
+  --color-primary-7: var(--amber-7);
+  --color-primary-8: var(--amber-8);
+  --color-primary-9: var(--amber-9);
+  --color-primary-10: var(--amber-10);
+  --color-primary-11: var(--amber-11);
+  --color-primary-12: var(--amber-12);
 
-  --primary-a1: var(--amber-a1);
-  --primary-a2: var(--amber-a2);
-  --primary-a3: var(--amber-a3);
-  --primary-a4: var(--amber-a4);
-  --primary-a5: var(--amber-a5);
-  --primary-a6: var(--amber-a6);
-  --primary-a7: var(--amber-a7);
-  --primary-a8: var(--amber-a8);
-  --primary-a9: var(--amber-a9);
-  --primary-a10: var(--amber-a10);
-  --primary-a11: var(--amber-a11);
-  --primary-a12: var(--amber-a12);
+  --color-primary-a1: var(--amber-a1);
+  --color-primary-a2: var(--amber-a2);
+  --color-primary-a3: var(--amber-a3);
+  --color-primary-a4: var(--amber-a4);
+  --color-primary-a5: var(--amber-a5);
+  --color-primary-a6: var(--amber-a6);
+  --color-primary-a7: var(--amber-a7);
+  --color-primary-a8: var(--amber-a8);
+  --color-primary-a9: var(--amber-a9);
+  --color-primary-a10: var(--amber-a10);
+  --color-primary-a11: var(--amber-a11);
+  --color-primary-a12: var(--amber-a12);
 
-  --primary-contrast: var(--amber-contrast);
-  --primary-surface: var(--amber-surface);
-  --primary-indicator: var(--amber-indicator);
-  --primary-track: var(--amber-track);
+  --color-primary-contrast: var(--amber-contrast);
+  --color-primary-surface: var(--amber-surface);
+  --color-primary-indicator: var(--amber-indicator);
+  --color-primary-track: var(--amber-track);
 }
 
 [data-secondary="amber"] {
-  --secondary-1: var(--amber-1);
-  --secondary-2: var(--amber-2);
-  --secondary-3: var(--amber-3);
-  --secondary-4: var(--amber-4);
-  --secondary-5: var(--amber-5);
-  --secondary-6: var(--amber-6);
-  --secondary-7: var(--amber-7);
-  --secondary-8: var(--amber-8);
-  --secondary-9: var(--amber-9);
-  --secondary-10: var(--amber-10);
-  --secondary-11: var(--amber-11);
-  --secondary-12: var(--amber-12);
+  --color-secondary-1: var(--amber-1);
+  --color-secondary-2: var(--amber-2);
+  --color-secondary-3: var(--amber-3);
+  --color-secondary-4: var(--amber-4);
+  --color-secondary-5: var(--amber-5);
+  --color-secondary-6: var(--amber-6);
+  --color-secondary-7: var(--amber-7);
+  --color-secondary-8: var(--amber-8);
+  --color-secondary-9: var(--amber-9);
+  --color-secondary-10: var(--amber-10);
+  --color-secondary-11: var(--amber-11);
+  --color-secondary-12: var(--amber-12);
 
-  --secondary-a1: var(--amber-a1);
-  --secondary-a2: var(--amber-a2);
-  --secondary-a3: var(--amber-a3);
-  --secondary-a4: var(--amber-a4);
-  --secondary-a5: var(--amber-a5);
-  --secondary-a6: var(--amber-a6);
-  --secondary-a7: var(--amber-a7);
-  --secondary-a8: var(--amber-a8);
-  --secondary-a9: var(--amber-a9);
-  --secondary-a10: var(--amber-a10);
-  --secondary-a11: var(--amber-a11);
-  --secondary-a12: var(--amber-a12);
+  --color-secondary-a1: var(--amber-a1);
+  --color-secondary-a2: var(--amber-a2);
+  --color-secondary-a3: var(--amber-a3);
+  --color-secondary-a4: var(--amber-a4);
+  --color-secondary-a5: var(--amber-a5);
+  --color-secondary-a6: var(--amber-a6);
+  --color-secondary-a7: var(--amber-a7);
+  --color-secondary-a8: var(--amber-a8);
+  --color-secondary-a9: var(--amber-a9);
+  --color-secondary-a10: var(--amber-a10);
+  --color-secondary-a11: var(--amber-a11);
+  --color-secondary-a12: var(--amber-a12);
 
-  --secondary-contrast: var(--amber-contrast);
-  --secondary-surface: var(--amber-surface);
-  --secondary-indicator: var(--amber-indicator);
-  --secondary-track: var(--amber-track);
+  --color-secondary-contrast: var(--amber-contrast);
+  --color-secondary-surface: var(--amber-surface);
+  --color-secondary-indicator: var(--amber-indicator);
+  --color-secondary-track: var(--amber-track);
 }
