--- a/src/styles/radix-colors/blue.css
+++ b/src/styles/radix-colors/blue.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="blue"] {
-  --primary-1: var(--blue-1);
-  --primary-2: var(--blue-2);
-  --primary-3: var(--blue-3);
-  --primary-4: var(--blue-4);
-  --primary-5: var(--blue-5);
-  --primary-6: var(--blue-6);
-  --primary-7: var(--blue-7);
-  --primary-8: var(--blue-8);
-  --primary-9: var(--blue-9);
-  --primary-10: var(--blue-10);
-  --primary-11: var(--blue-11);
-  --primary-12: var(--blue-12);
+  --color-primary-1: var(--blue-1);
+  --color-primary-2: var(--blue-2);
+  --color-primary-3: var(--blue-3);
+  --color-primary-4: var(--blue-4);
+  --color-primary-5: var(--blue-5);
+  --color-primary-6: var(--blue-6);
+  --color-primary-7: var(--blue-7);
+  --color-primary-8: var(--blue-8);
+  --color-primary-9: var(--blue-9);
+  --color-primary-10: var(--blue-10);
+  --color-primary-11: var(--blue-11);
+  --color-primary-12: var(--blue-12);
 
-  --primary-a1: var(--blue-a1);
-  --primary-a2: var(--blue-a2);
-  --primary-a3: var(--blue-a3);
-  --primary-a4: var(--blue-a4);
-  --primary-a5: var(--blue-a5);
-  --primary-a6: var(--blue-a6);
-  --primary-a7: var(--blue-a7);
-  --primary-a8: var(--blue-a8);
-  --primary-a9: var(--blue-a9);
-  --primary-a10: var(--blue-a10);
-  --primary-a11: var(--blue-a11);
-  --primary-a12: var(--blue-a12);
+  --color-primary-a1: var(--blue-a1);
+  --color-primary-a2: var(--blue-a2);
+  --color-primary-a3: var(--blue-a3);
+  --color-primary-a4: var(--blue-a4);
+  --color-primary-a5: var(--blue-a5);
+  --color-primary-a6: var(--blue-a6);
+  --color-primary-a7: var(--blue-a7);
+  --color-primary-a8: var(--blue-a8);
+  --color-primary-a9: var(--blue-a9);
+  --color-primary-a10: var(--blue-a10);
+  --color-primary-a11: var(--blue-a11);
+  --color-primary-a12: var(--blue-a12);
 
-  --primary-contrast: var(--blue-contrast);
-  --primary-surface: var(--blue-surface);
-  --primary-indicator: var(--blue-indicator);
-  --primary-track: var(--blue-track);
+  --color-primary-contrast: var(--blue-contrast);
+  --color-primary-surface: var(--blue-surface);
+  --color-primary-indicator: var(--blue-indicator);
+  --color-primary-track: var(--blue-track);
 }
 
 [data-secondary="blue"] {
-  --secondary-1: var(--blue-1);
-  --secondary-2: var(--blue-2);
-  --secondary-3: var(--blue-3);
-  --secondary-4: var(--blue-4);
-  --secondary-5: var(--blue-5);
-  --secondary-6: var(--blue-6);
-  --secondary-7: var(--blue-7);
-  --secondary-8: var(--blue-8);
-  --secondary-9: var(--blue-9);
-  --secondary-10: var(--blue-10);
-  --secondary-11: var(--blue-11);
-  --secondary-12: var(--blue-12);
+  --color-secondary-1: var(--blue-1);
+  --color-secondary-2: var(--blue-2);
+  --color-secondary-3: var(--blue-3);
+  --color-secondary-4: var(--blue-4);
+  --color-secondary-5: var(--blue-5);
+  --color-secondary-6: var(--blue-6);
+  --color-secondary-7: var(--blue-7);
+  --color-secondary-8: var(--blue-8);
+  --color-secondary-9: var(--blue-9);
+  --color-secondary-10: var(--blue-10);
+  --color-secondary-11: var(--blue-11);
+  --color-secondary-12: var(--blue-12);
 
-  --secondary-a1: var(--blue-a1);
-  --secondary-a2: var(--blue-a2);
-  --secondary-a3: var(--blue-a3);
-  --secondary-a4: var(--blue-a4);
-  --secondary-a5: var(--blue-a5);
-  --secondary-a6: var(--blue-a6);
-  --secondary-a7: var(--blue-a7);
-  --secondary-a8: var(--blue-a8);
-  --secondary-a9: var(--blue-a9);
-  --secondary-a10: var(--blue-a10);
-  --secondary-a11: var(--blue-a11);
-  --secondary-a12: var(--blue-a12);
+  --color-secondary-a1: var(--blue-a1);
+  --color-secondary-a2: var(--blue-a2);
+  --color-secondary-a3: var(--blue-a3);
+  --color-secondary-a4: var(--blue-a4);
+  --color-secondary-a5: var(--blue-a5);
+  --color-secondary-a6: var(--blue-a6);
+  --color-secondary-a7: var(--blue-a7);
+  --color-secondary-a8: var(--blue-a8);
+  --color-secondary-a9: var(--blue-a9);
+  --color-secondary-a10: var(--blue-a10);
+  --color-secondary-a11: var(--blue-a11);
+  --color-secondary-a12: var(--blue-a12);
 
-  --secondary-contrast: var(--blue-contrast);
-  --secondary-surface: var(--blue-surface);
-  --secondary-indicator: var(--blue-indicator);
-  --secondary-track: var(--blue-track);
+  --color-secondary-contrast: var(--blue-contrast);
+  --color-secondary-surface: var(--blue-surface);
+  --color-secondary-indicator: var(--blue-indicator);
+  --color-secondary-track: var(--blue-track);
 }
