--- a/src/styles/radix-colors/brown.css
+++ b/src/styles/radix-colors/brown.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="brown"] {
-  --primary-1: var(--brown-1);
-  --primary-2: var(--brown-2);
-  --primary-3: var(--brown-3);
-  --primary-4: var(--brown-4);
-  --primary-5: var(--brown-5);
-  --primary-6: var(--brown-6);
-  --primary-7: var(--brown-7);
-  --primary-8: var(--brown-8);
-  --primary-9: var(--brown-9);
-  --primary-10: var(--brown-10);
-  --primary-11: var(--brown-11);
-  --primary-12: var(--brown-12);
+  --color-primary-1: var(--brown-1);
+  --color-primary-2: var(--brown-2);
+  --color-primary-3: var(--brown-3);
+  --color-primary-4: var(--brown-4);
+  --color-primary-5: var(--brown-5);
+  --color-primary-6: var(--brown-6);
+  --color-primary-7: var(--brown-7);
+  --color-primary-8: var(--brown-8);
+  --color-primary-9: var(--brown-9);
+  --color-primary-10: var(--brown-10);
+  --color-primary-11: var(--brown-11);
+  --color-primary-12: var(--brown-12);
 
-  --primary-a1: var(--brown-a1);
-  --primary-a2: var(--brown-a2);
-  --primary-a3: var(--brown-a3);
-  --primary-a4: var(--brown-a4);
-  --primary-a5: var(--brown-a5);
-  --primary-a6: var(--brown-a6);
-  --primary-a7: var(--brown-a7);
-  --primary-a8: var(--brown-a8);
-  --primary-a9: var(--brown-a9);
-  --primary-a10: var(--brown-a10);
-  --primary-a11: var(--brown-a11);
-  --primary-a12: var(--brown-a12);
+  --color-primary-a1: var(--brown-a1);
+  --color-primary-a2: var(--brown-a2);
+  --color-primary-a3: var(--brown-a3);
+  --color-primary-a4: var(--brown-a4);
+  --color-primary-a5: var(--brown-a5);
+  --color-primary-a6: var(--brown-a6);
+  --color-primary-a7: var(--brown-a7);
+  --color-primary-a8: var(--brown-a8);
+  --color-primary-a9: var(--brown-a9);
+  --color-primary-a10: var(--brown-a10);
+  --color-primary-a11: var(--brown-a11);
+  --color-primary-a12: var(--brown-a12);
 
-  --primary-contrast: var(--brown-contrast);
-  --primary-surface: var(--brown-surface);
-  --primary-indicator: var(--brown-indicator);
-  --primary-track: var(--brown-track);
+  --color-primary-contrast: var(--brown-contrast);
+  --color-primary-surface: var(--brown-surface);
+  --color-primary-indicator: var(--brown-indicator);
+  --color-primary-track: var(--brown-track);
 }
 
 [data-secondary="brown"] {
-  --secondary-1: var(--brown-1);
-  --secondary-2: var(--brown-2);
-  --secondary-3: var(--brown-3);
-  --secondary-4: var(--brown-4);
-  --secondary-5: var(--brown-5);
-  --secondary-6: var(--brown-6);
-  --secondary-7: var(--brown-7);
-  --secondary-8: var(--brown-8);
-  --secondary-9: var(--brown-9);
-  --secondary-10: var(--brown-10);
-  --secondary-11: var(--brown-11);
-  --secondary-12: var(--brown-12);
+  --color-secondary-1: var(--brown-1);
+  --color-secondary-2: var(--brown-2);
+  --color-secondary-3: var(--brown-3);
+  --color-secondary-4: var(--brown-4);
+  --color-secondary-5: var(--brown-5);
+  --color-secondary-6: var(--brown-6);
+  --color-secondary-7: var(--brown-7);
+  --color-secondary-8: var(--brown-8);
+  --color-secondary-9: var(--brown-9);
+  --color-secondary-10: var(--brown-10);
+  --color-secondary-11: var(--brown-11);
+  --color-secondary-12: var(--brown-12);
 
-  --secondary-a1: var(--brown-a1);
-  --secondary-a2: var(--brown-a2);
-  --secondary-a3: var(--brown-a3);
-  --secondary-a4: var(--brown-a4);
-  --secondary-a5: var(--brown-a5);
-  --secondary-a6: var(--brown-a6);
-  --secondary-a7: var(--brown-a7);
-  --secondary-a8: var(--brown-a8);
-  --secondary-a9: var(--brown-a9);
-  --secondary-a10: var(--brown-a10);
-  --secondary-a11: var(--brown-a11);
-  --secondary-a12: var(--brown-a12);
+  --color-secondary-a1: var(--brown-a1);
+  --color-secondary-a2: var(--brown-a2);
+  --color-secondary-a3: var(--brown-a3);
+  --color-secondary-a4: var(--brown-a4);
+  --color-secondary-a5: var(--brown-a5);
+  --color-secondary-a6: var(--brown-a6);
+  --color-secondary-a7: var(--brown-a7);
+  --color-secondary-a8: var(--brown-a8);
+  --color-secondary-a9: var(--brown-a9);
+  --color-secondary-a10: var(--brown-a10);
+  --color-secondary-a11: var(--brown-a11);
+  --color-secondary-a12: var(--brown-a12);
 
-  --secondary-contrast: var(--brown-contrast);
-  --secondary-surface: var(--brown-surface);
-  --secondary-indicator: var(--brown-indicator);
-  --secondary-track: var(--brown-track);
+  --color-secondary-contrast: var(--brown-contrast);
+  --color-secondary-surface: var(--brown-surface);
+  --color-secondary-indicator: var(--brown-indicator);
+  --color-secondary-track: var(--brown-track);
 }
