--- a/src/styles/radix-colors/contrast.css
+++ b/src/styles/radix-colors/contrast.css
@@ -291,104 +291,104 @@
 }
 
 [data-primary="contrast"] {
-  --primary-1: var(--contrast-1);
-  --primary-2: var(--contrast-2);
-  --primary-3: var(--contrast-3);
-  --primary-4: var(--contrast-4);
-  --primary-5: var(--contrast-5);
-  --primary-6: var(--contrast-6);
-  --primary-7: var(--contrast-7);
-  --primary-8: var(--contrast-8);
-  --primary-9: var(--contrast-9);
-  --primary-10: var(--contrast-10);
-  --primary-11: var(--contrast-11);
-  --primary-12: var(--contrast-12);
+  --color-primary-1: var(--contrast-1);
+  --color-primary-2: var(--contrast-2);
+  --color-primary-3: var(--contrast-3);
+  --color-primary-4: var(--contrast-4);
+  --color-primary-5: var(--contrast-5);
+  --color-primary-6: var(--contrast-6);
+  --color-primary-7: var(--contrast-7);
+  --color-primary-8: var(--contrast-8);
+  --color-primary-9: var(--contrast-9);
+  --color-primary-10: var(--contrast-10);
+  --color-primary-11: var(--contrast-11);
+  --color-primary-12: var(--contrast-12);
 
-  --primary-a1: var(--contrast-a1);
-  --primary-a2: var(--contrast-a2);
-  --primary-a3: var(--contrast-a3);
-  --primary-a4: var(--contrast-a4);
-  --primary-a5: var(--contrast-a5);
-  --primary-a6: var(--contrast-a6);
-  --primary-a7: var(--contrast-a7);
-  --primary-a8: var(--contrast-a8);
-  --primary-a9: var(--contrast-a9);
-  --primary-a10: var(--contrast-a10);
-  --primary-a11: var(--contrast-a11);
-  --primary-a12: var(--contrast-a12);
+  --color-primary-a1: var(--contrast-a1);
+  --color-primary-a2: var(--contrast-a2);
+  --color-primary-a3: var(--contrast-a3);
+  --color-primary-a4: var(--contrast-a4);
+  --color-primary-a5: var(--contrast-a5);
+  --color-primary-a6: var(--contrast-a6);
+  --color-primary-a7: var(--contrast-a7);
+  --color-primary-a8: var(--contrast-a8);
+  --color-primary-a9: var(--contrast-a9);
+  --color-primary-a10: var(--contrast-a10);
+  --color-primary-a11: var(--contrast-a11);
+  --color-primary-a12: var(--contrast-a12);
 
-  --primary-contrast: var(--contrast-contrast);
-  --primary-surface: var(--contrast-surface);
-  --primary-indicator: var(--contrast-indicator);
-  --primary-track: var(--contrast-track);
+  --color-primary-contrast: var(--contrast-contrast);
+  --color-primary-surface: var(--contrast-surface);
+  --color-primary-indicator: var(--contrast-indicator);
+  --color-primary-track: var(--contrast-track);
 }
 
 [data-secondary="contrast"] {
-  --secondary-1: var(--contrast-1);
-  --secondary-2: var(--contrast-2);
-  --secondary-3: var(--contrast-3);
-  --secondary-4: var(--contrast-4);
-  --secondary-5: var(--contrast-5);
-  --secondary-6: var(--contrast-6);
-  --secondary-7: var(--contrast-7);
-  --secondary-8: var(--contrast-8);
-  --secondary-9: var(--contrast-9);
-  --secondary-10: var(--contrast-10);
-  --secondary-11: var(--contrast-11);
-  --secondary-12: var(--contrast-12);
+  --color-secondary-1: var(--contrast-1);
+  --color-secondary-2: var(--contrast-2);
+  --color-secondary-3: var(--contrast-3);
+  --color-secondary-4: var(--contrast-4);
+  --color-secondary-5: var(--contrast-5);
+  --color-secondary-6: var(--contrast-6);
+  --color-secondary-7: var(--contrast-7);
+  --color-secondary-8: var(--contrast-8);
+  --color-secondary-9: var(--contrast-9);
+  --color-secondary-10: var(--contrast-10);
+  --color-secondary-11: var(--contrast-11);
+  --color-secondary-12: var(--contrast-12);
 
-  --secondary-a1: var(--contrast-a1);
-  --secondary-a2: var(--contrast-a2);
-  --secondary-a3: var(--contrast-a3);
-  --secondary-a4: var(--contrast-a4);
-  --secondary-a5: var(--contrast-a5);
-  --secondary-a6: var(--contrast-a6);
-  --secondary-a7: var(--contrast-a7);
-  --secondary-a8: var(--contrast-a8);
-  --secondary-a9: var(--contrast-a9);
-  --secondary-a10: var(--contrast-a10);
-  --secondary-a11: var(--contrast-a11);
-  --secondary-a12: var(--contrast-a12);
+  --color-secondary-a1: var(--contrast-a1);
+  --color-secondary-a2: var(--contrast-a2);
+  --color-secondary-a3: var(--contrast-a3);
+  --color-secondary-a4: var(--contrast-a4);
+  --color-secondary-a5: var(--contrast-a5);
+  --color-secondary-a6: var(--contrast-a6);
+  --color-secondary-a7: var(--contrast-a7);
+  --color-secondary-a8: var(--contrast-a8);
+  --color-secondary-a9: var(--contrast-a9);
+  --color-secondary-a10: var(--contrast-a10);
+  --color-secondary-a11: var(--contrast-a11);
+  --color-secondary-a12: var(--contrast-a12);
 
-  --secondary-contrast: var(--contrast-contrast);
-  --secondary-surface: var(--contrast-surface);
-  --secondary-indicator: var(--contrast-indicator);
-  --secondary-track: var(--contrast-track);
+  --color-secondary-contrast: var(--contrast-contrast);
+  --color-secondary-surface: var(--contrast-surface);
+  --color-secondary-indicator: var(--contrast-indicator);
+  --color-secondary-track: var(--contrast-track);
 }
 
 [data-surface="contrast"] {
-  --surface-1: var(--contrast-surface-1);
-  --surface-2: var(--contrast-surface-2);
-  --surface-3: var(--contrast-surface-3);
-  --surface-4: var(--contrast-surface-4);
-  --surface-5: var(--contrast-surface-5);
-  --surface-6: var(--contrast-surface-6);
-  --surface-7: var(--contrast-surface-7);
-  --surface-8: var(--contrast-surface-8);
-  --surface-9: var(--contrast-surface-9);
-  --surface-10: var(--contrast-surface-10);
-  --surface-11: var(--contrast-surface-11);
-  --surface-12: var(--contrast-surface-12);
+  --color-surface-1: var(--contrast-surface-1);
+  --color-surface-2: var(--contrast-surface-2);
+  --color-surface-3: var(--contrast-surface-3);
+  --color-surface-4: var(--contrast-surface-4);
+  --color-surface-5: var(--contrast-surface-5);
+  --color-surface-6: var(--contrast-surface-6);
+  --color-surface-7: var(--contrast-surface-7);
+  --color-surface-8: var(--contrast-surface-8);
+  --color-surface-9: var(--contrast-surface-9);
+  --color-surface-10: var(--contrast-surface-10);
+  --color-surface-11: var(--contrast-surface-11);
+  --color-surface-12: var(--contrast-surface-12);
 
-  --surface-a1: var(--contrast-surface-a1);
-  --surface-a2: var(--contrast-surface-a2);
-  --surface-a3: var(--contrast-surface-a3);
-  --surface-a4: var(--contrast-surface-a4);
-  --surface-a5: var(--contrast-surface-a5);
-  --surface-a6: var(--contrast-surface-a6);
-  --surface-a7: var(--contrast-surface-a7);
-  --surface-a8: var(--contrast-surface-a8);
-  --surface-a9: var(--contrast-surface-a9);
-  --surface-a10: var(--contrast-surface-a10);
-  --surface-a11: var(--contrast-surface-a11);
-  --surface-a12: var(--contrast-surface-a12);
+  --color-surface-a1: var(--contrast-surface-a1);
+  --color-surface-a2: var(--contrast-surface-a2);
+  --color-surface-a3: var(--contrast-surface-a3);
+  --color-surface-a4: var(--contrast-surface-a4);
+  --color-surface-a5: var(--contrast-surface-a5);
+  --color-surface-a6: var(--contrast-surface-a6);
+  --color-surface-a7: var(--contrast-surface-a7);
+  --color-surface-a8: var(--contrast-surface-a8);
+  --color-surface-a9: var(--contrast-surface-a9);
+  --color-surface-a10: var(--contrast-surface-a10);
+  --color-surface-a11: var(--contrast-surface-a11);
+  --color-surface-a12: var(--contrast-surface-a12);
 
-  --surface-contrast: var(--contrast-surface-contrast);
-  --surface-surface: var(--contrast-surface-surface);
-  --surface-indicator: var(--contrast-surface-indicator);
-  --surface-track: var(--contrast-surface-track);
-  --surface-backdrop: var(--contrast-surface-backdrop);
+  --color-surface-contrast: var(--contrast-surface-contrast);
+  --color-surface-surface: var(--contrast-surface-surface);
+  --color-surface-indicator: var(--contrast-surface-indicator);
+  --color-surface-track: var(--contrast-surface-track);
+  --color-surface-backdrop: var(--contrast-surface-backdrop);
 
-  --border-color: var(--surface-a3);
-  --shadow-color: var(--surface-a2);
+  --border-color: var(--color-surface-a3);
+  --shadow-color: var(--color-surface-a2);
 }
