--- a/src/styles/radix-colors/crimson.css
+++ b/src/styles/radix-colors/crimson.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="crimson"] {
-  --primary-1: var(--crimson-1);
-  --primary-2: var(--crimson-2);
-  --primary-3: var(--crimson-3);
-  --primary-4: var(--crimson-4);
-  --primary-5: var(--crimson-5);
-  --primary-6: var(--crimson-6);
-  --primary-7: var(--crimson-7);
-  --primary-8: var(--crimson-8);
-  --primary-9: var(--crimson-9);
-  --primary-10: var(--crimson-10);
-  --primary-11: var(--crimson-11);
-  --primary-12: var(--crimson-12);
+  --color-primary-1: var(--crimson-1);
+  --color-primary-2: var(--crimson-2);
+  --color-primary-3: var(--crimson-3);
+  --color-primary-4: var(--crimson-4);
+  --color-primary-5: var(--crimson-5);
+  --color-primary-6: var(--crimson-6);
+  --color-primary-7: var(--crimson-7);
+  --color-primary-8: var(--crimson-8);
+  --color-primary-9: var(--crimson-9);
+  --color-primary-10: var(--crimson-10);
+  --color-primary-11: var(--crimson-11);
+  --color-primary-12: var(--crimson-12);
 
-  --primary-a1: var(--crimson-a1);
-  --primary-a2: var(--crimson-a2);
-  --primary-a3: var(--crimson-a3);
-  --primary-a4: var(--crimson-a4);
-  --primary-a5: var(--crimson-a5);
-  --primary-a6: var(--crimson-a6);
-  --primary-a7: var(--crimson-a7);
-  --primary-a8: var(--crimson-a8);
-  --primary-a9: var(--crimson-a9);
-  --primary-a10: var(--crimson-a10);
-  --primary-a11: var(--crimson-a11);
-  --primary-a12: var(--crimson-a12);
+  --color-primary-a1: var(--crimson-a1);
+  --color-primary-a2: var(--crimson-a2);
+  --color-primary-a3: var(--crimson-a3);
+  --color-primary-a4: var(--crimson-a4);
+  --color-primary-a5: var(--crimson-a5);
+  --color-primary-a6: var(--crimson-a6);
+  --color-primary-a7: var(--crimson-a7);
+  --color-primary-a8: var(--crimson-a8);
+  --color-primary-a9: var(--crimson-a9);
+  --color-primary-a10: var(--crimson-a10);
+  --color-primary-a11: var(--crimson-a11);
+  --color-primary-a12: var(--crimson-a12);
 
-  --primary-contrast: var(--crimson-contrast);
-  --primary-surface: var(--crimson-surface);
-  --primary-indicator: var(--crimson-indicator);
-  --primary-track: var(--crimson-track);
+  --color-primary-contrast: var(--crimson-contrast);
+  --color-primary-surface: var(--crimson-surface);
+  --color-primary-indicator: var(--crimson-indicator);
+  --color-primary-track: var(--crimson-track);
 }
 
 [data-secondary="crimson"] {
-  --secondary-1: var(--crimson-1);
-  --secondary-2: var(--crimson-2);
-  --secondary-3: var(--crimson-3);
-  --secondary-4: var(--crimson-4);
-  --secondary-5: var(--crimson-5);
-  --secondary-6: var(--crimson-6);
-  --secondary-7: var(--crimson-7);
-  --secondary-8: var(--crimson-8);
-  --secondary-9: var(--crimson-9);
-  --secondary-10: var(--crimson-10);
-  --secondary-11: var(--crimson-11);
-  --secondary-12: var(--crimson-12);
+  --color-secondary-1: var(--crimson-1);
+  --color-secondary-2: var(--crimson-2);
+  --color-secondary-3: var(--crimson-3);
+  --color-secondary-4: var(--crimson-4);
+  --color-secondary-5: var(--crimson-5);
+  --color-secondary-6: var(--crimson-6);
+  --color-secondary-7: var(--crimson-7);
+  --color-secondary-8: var(--crimson-8);
+  --color-secondary-9: var(--crimson-9);
+  --color-secondary-10: var(--crimson-10);
+  --color-secondary-11: var(--crimson-11);
+  --color-secondary-12: var(--crimson-12);
 
-  --secondary-a1: var(--crimson-a1);
-  --secondary-a2: var(--crimson-a2);
-  --secondary-a3: var(--crimson-a3);
-  --secondary-a4: var(--crimson-a4);
-  --secondary-a5: var(--crimson-a5);
-  --secondary-a6: var(--crimson-a6);
-  --secondary-a7: var(--crimson-a7);
-  --secondary-a8: var(--crimson-a8);
-  --secondary-a9: var(--crimson-a9);
-  --secondary-a10: var(--crimson-a10);
-  --secondary-a11: var(--crimson-a11);
-  --secondary-a12: var(--crimson-a12);
+  --color-secondary-a1: var(--crimson-a1);
+  --color-secondary-a2: var(--crimson-a2);
+  --color-secondary-a3: var(--crimson-a3);
+  --color-secondary-a4: var(--crimson-a4);
+  --color-secondary-a5: var(--crimson-a5);
+  --color-secondary-a6: var(--crimson-a6);
+  --color-secondary-a7: var(--crimson-a7);
+  --color-secondary-a8: var(--crimson-a8);
+  --color-secondary-a9: var(--crimson-a9);
+  --color-secondary-a10: var(--crimson-a10);
+  --color-secondary-a11: var(--crimson-a11);
+  --color-secondary-a12: var(--crimson-a12);
 
-  --secondary-contrast: var(--crimson-contrast);
-  --secondary-surface: var(--crimson-surface);
-  --secondary-indicator: var(--crimson-indicator);
-  --secondary-track: var(--crimson-track);
+  --color-secondary-contrast: var(--crimson-contrast);
+  --color-secondary-surface: var(--crimson-surface);
+  --color-secondary-indicator: var(--crimson-indicator);
+  --color-secondary-track: var(--crimson-track);
 }
