--- a/src/styles/radix-colors/cyan.css
+++ b/src/styles/radix-colors/cyan.css
@@ -43,67 +43,67 @@
 [data-primary="cyan"] .dark  */
 
 [data-primary="cyan"] {
-  --primary-1: var(--cyan-1);
-  --primary-2: var(--cyan-2);
-  --primary-3: var(--cyan-3);
-  --primary-4: var(--cyan-4);
-  --primary-5: var(--cyan-5);
-  --primary-6: var(--cyan-6);
-  --primary-7: var(--cyan-7);
-  --primary-8: var(--cyan-8);
-  --primary-9: var(--cyan-9);
-  --primary-10: var(--cyan-10);
-  --primary-11: var(--cyan-11);
-  --primary-12: var(--cyan-12);
+  --color-primary-1: var(--cyan-1);
+  --color-primary-2: var(--cyan-2);
+  --color-primary-3: var(--cyan-3);
+  --color-primary-4: var(--cyan-4);
+  --color-primary-5: var(--cyan-5);
+  --color-primary-6: var(--cyan-6);
+  --color-primary-7: var(--cyan-7);
+  --color-primary-8: var(--cyan-8);
+  --color-primary-9: var(--cyan-9);
+  --color-primary-10: var(--cyan-10);
+  --color-primary-11: var(--cyan-11);
+  --color-primary-12: var(--cyan-12);
 
-  --primary-a1: var(--cyan-a1);
-  --primary-a2: var(--cyan-a2);
-  --primary-a3: var(--cyan-a3);
-  --primary-a4: var(--cyan-a4);
-  --primary-a5: var(--cyan-a5);
-  --primary-a6: var(--cyan-a6);
-  --primary-a7: var(--cyan-a7);
-  --primary-a8: var(--cyan-a8);
-  --primary-a9: var(--cyan-a9);
-  --primary-a10: var(--cyan-a10);
-  --primary-a11: var(--cyan-a11);
-  --primary-a12: var(--cyan-a12);
+  --color-primary-a1: var(--cyan-a1);
+  --color-primary-a2: var(--cyan-a2);
+  --color-primary-a3: var(--cyan-a3);
+  --color-primary-a4: var(--cyan-a4);
+  --color-primary-a5: var(--cyan-a5);
+  --color-primary-a6: var(--cyan-a6);
+  --color-primary-a7: var(--cyan-a7);
+  --color-primary-a8: var(--cyan-a8);
+  --color-primary-a9: var(--cyan-a9);
+  --color-primary-a10: var(--cyan-a10);
+  --color-primary-a11: var(--cyan-a11);
+  --color-primary-a12: var(--cyan-a12);
 
-  --primary-contrast: var(--cyan-contrast);
-  --primary-surface: var(--cyan-surface);
-  --primary-indicator: var(--cyan-indicator);
-  --primary-track: var(--cyan-track);
+  --color-primary-contrast: var(--cyan-contrast);
+  --color-primary-surface: var(--cyan-surface);
+  --color-primary-indicator: var(--cyan-indicator);
+  --color-primary-track: var(--cyan-track);
 }
 
 [data-secondary="cyan"] {
-  --secondary-1: var(--cyan-1);
-  --secondary-2: var(--cyan-2);
-  --secondary-3: var(--cyan-3);
-  --secondary-4: var(--cyan-4);
-  --secondary-5: var(--cyan-5);
-  --secondary-6: var(--cyan-6);
-  --secondary-7: var(--cyan-7);
-  --secondary-8: var(--cyan-8);
-  --secondary-9: var(--cyan-9);
-  --secondary-10: var(--cyan-10);
-  --secondary-11: var(--cyan-11);
-  --secondary-12: var(--cyan-12);
+  --color-secondary-1: var(--cyan-1);
+  --color-secondary-2: var(--cyan-2);
+  --color-secondary-3: var(--cyan-3);
+  --color-secondary-4: var(--cyan-4);
+  --color-secondary-5: var(--cyan-5);
+  --color-secondary-6: var(--cyan-6);
+  --color-secondary-7: var(--cyan-7);
+  --color-secondary-8: var(--cyan-8);
+  --color-secondary-9: var(--cyan-9);
+  --color-secondary-10: var(--cyan-10);
+  --color-secondary-11: var(--cyan-11);
+  --color-secondary-12: var(--cyan-12);
 
-  --secondary-a1: var(--cyan-a1);
-  --secondary-a2: var(--cyan-a2);
-  --secondary-a3: var(--cyan-a3);
-  --secondary-a4: var(--cyan-a4);
-  --secondary-a5: var(--cyan-a5);
-  --secondary-a6: var(--cyan-a6);
-  --secondary-a7: var(--cyan-a7);
-  --secondary-a8: var(--cyan-a8);
-  --secondary-a9: var(--cyan-a9);
-  --secondary-a10: var(--cyan-a10);
-  --secondary-a11: var(--cyan-a11);
-  --secondary-a12: var(--cyan-a12);
+  --color-secondary-a1: var(--cyan-a1);
+  --color-secondary-a2: var(--cyan-a2);
+  --color-secondary-a3: var(--cyan-a3);
+  --color-secondary-a4: var(--cyan-a4);
+  --color-secondary-a5: var(--cyan-a5);
+  --color-secondary-a6: var(--cyan-a6);
+  --color-secondary-a7: var(--cyan-a7);
+  --color-secondary-a8: var(--cyan-a8);
+  --color-secondary-a9: var(--cyan-a9);
+  --color-secondary-a10: var(--cyan-a10);
+  --color-secondary-a11: var(--cyan-a11);
+  --color-secondary-a12: var(--cyan-a12);
 
-  --secondary-contrast: var(--cyan-contrast);
-  --secondary-surface: var(--cyan-surface);
-  --secondary-indicator: var(--cyan-indicator);
-  --secondary-track: var(--cyan-track);
+  --color-secondary-contrast: var(--cyan-contrast);
+  --color-secondary-surface: var(--cyan-surface);
+  --color-secondary-indicator: var(--cyan-indicator);
+  --color-secondary-track: var(--cyan-track);
 }
