--- a/src/styles/radix-colors/gold.css
+++ b/src/styles/radix-colors/gold.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="gold"] {
-  --primary-1: var(--gold-1);
-  --primary-2: var(--gold-2);
-  --primary-3: var(--gold-3);
-  --primary-4: var(--gold-4);
-  --primary-5: var(--gold-5);
-  --primary-6: var(--gold-6);
-  --primary-7: var(--gold-7);
-  --primary-8: var(--gold-8);
-  --primary-9: var(--gold-9);
-  --primary-10: var(--gold-10);
-  --primary-11: var(--gold-11);
-  --primary-12: var(--gold-12);
+  --color-primary-1: var(--gold-1);
+  --color-primary-2: var(--gold-2);
+  --color-primary-3: var(--gold-3);
+  --color-primary-4: var(--gold-4);
+  --color-primary-5: var(--gold-5);
+  --color-primary-6: var(--gold-6);
+  --color-primary-7: var(--gold-7);
+  --color-primary-8: var(--gold-8);
+  --color-primary-9: var(--gold-9);
+  --color-primary-10: var(--gold-10);
+  --color-primary-11: var(--gold-11);
+  --color-primary-12: var(--gold-12);
 
-  --primary-a1: var(--gold-a1);
-  --primary-a2: var(--gold-a2);
-  --primary-a3: var(--gold-a3);
-  --primary-a4: var(--gold-a4);
-  --primary-a5: var(--gold-a5);
-  --primary-a6: var(--gold-a6);
-  --primary-a7: var(--gold-a7);
-  --primary-a8: var(--gold-a8);
-  --primary-a9: var(--gold-a9);
-  --primary-a10: var(--gold-a10);
-  --primary-a11: var(--gold-a11);
-  --primary-a12: var(--gold-a12);
+  --color-primary-a1: var(--gold-a1);
+  --color-primary-a2: var(--gold-a2);
+  --color-primary-a3: var(--gold-a3);
+  --color-primary-a4: var(--gold-a4);
+  --color-primary-a5: var(--gold-a5);
+  --color-primary-a6: var(--gold-a6);
+  --color-primary-a7: var(--gold-a7);
+  --color-primary-a8: var(--gold-a8);
+  --color-primary-a9: var(--gold-a9);
+  --color-primary-a10: var(--gold-a10);
+  --color-primary-a11: var(--gold-a11);
+  --color-primary-a12: var(--gold-a12);
 
-  --primary-contrast: var(--gold-contrast);
-  --primary-surface: var(--gold-surface);
-  --primary-indicator: var(--gold-indicator);
-  --primary-track: var(--gold-track);
+  --color-primary-contrast: var(--gold-contrast);
+  --color-primary-surface: var(--gold-surface);
+  --color-primary-indicator: var(--gold-indicator);
+  --color-primary-track: var(--gold-track);
 }
 
 [data-secondary="gold"] {
-  --secondary-1: var(--gold-1);
-  --secondary-2: var(--gold-2);
-  --secondary-3: var(--gold-3);
-  --secondary-4: var(--gold-4);
-  --secondary-5: var(--gold-5);
-  --secondary-6: var(--gold-6);
-  --secondary-7: var(--gold-7);
-  --secondary-8: var(--gold-8);
-  --secondary-9: var(--gold-9);
-  --secondary-10: var(--gold-10);
-  --secondary-11: var(--gold-11);
-  --secondary-12: var(--gold-12);
+  --color-secondary-1: var(--gold-1);
+  --color-secondary-2: var(--gold-2);
+  --color-secondary-3: var(--gold-3);
+  --color-secondary-4: var(--gold-4);
+  --color-secondary-5: var(--gold-5);
+  --color-secondary-6: var(--gold-6);
+  --color-secondary-7: var(--gold-7);
+  --color-secondary-8: var(--gold-8);
+  --color-secondary-9: var(--gold-9);
+  --color-secondary-10: var(--gold-10);
+  --color-secondary-11: var(--gold-11);
+  --color-secondary-12: var(--gold-12);
 
-  --secondary-a1: var(--gold-a1);
-  --secondary-a2: var(--gold-a2);
-  --secondary-a3: var(--gold-a3);
-  --secondary-a4: var(--gold-a4);
-  --secondary-a5: var(--gold-a5);
-  --secondary-a6: var(--gold-a6);
-  --secondary-a7: var(--gold-a7);
-  --secondary-a8: var(--gold-a8);
-  --secondary-a9: var(--gold-a9);
-  --secondary-a10: var(--gold-a10);
-  --secondary-a11: var(--gold-a11);
-  --secondary-a12: var(--gold-a12);
+  --color-secondary-a1: var(--gold-a1);
+  --color-secondary-a2: var(--gold-a2);
+  --color-secondary-a3: var(--gold-a3);
+  --color-secondary-a4: var(--gold-a4);
+  --color-secondary-a5: var(--gold-a5);
+  --color-secondary-a6: var(--gold-a6);
+  --color-secondary-a7: var(--gold-a7);
+  --color-secondary-a8: var(--gold-a8);
+  --color-secondary-a9: var(--gold-a9);
+  --color-secondary-a10: var(--gold-a10);
+  --color-secondary-a11: var(--gold-a11);
+  --color-secondary-a12: var(--gold-a12);
 
-  --secondary-contrast: var(--gold-contrast);
-  --secondary-surface: var(--gold-surface);
-  --secondary-indicator: var(--gold-indicator);
-  --secondary-track: var(--gold-track);
+  --color-secondary-contrast: var(--gold-contrast);
+  --color-secondary-surface: var(--gold-surface);
+  --color-secondary-indicator: var(--gold-indicator);
+  --color-secondary-track: var(--gold-track);
 }
