--- a/src/styles/radix-colors/grass.css
+++ b/src/styles/radix-colors/grass.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="grass"] {
-  --primary-1: var(--grass-1);
-  --primary-2: var(--grass-2);
-  --primary-3: var(--grass-3);
-  --primary-4: var(--grass-4);
-  --primary-5: var(--grass-5);
-  --primary-6: var(--grass-6);
-  --primary-7: var(--grass-7);
-  --primary-8: var(--grass-8);
-  --primary-9: var(--grass-9);
-  --primary-10: var(--grass-10);
-  --primary-11: var(--grass-11);
-  --primary-12: var(--grass-12);
+  --color-primary-1: var(--grass-1);
+  --color-primary-2: var(--grass-2);
+  --color-primary-3: var(--grass-3);
+  --color-primary-4: var(--grass-4);
+  --color-primary-5: var(--grass-5);
+  --color-primary-6: var(--grass-6);
+  --color-primary-7: var(--grass-7);
+  --color-primary-8: var(--grass-8);
+  --color-primary-9: var(--grass-9);
+  --color-primary-10: var(--grass-10);
+  --color-primary-11: var(--grass-11);
+  --color-primary-12: var(--grass-12);
 
-  --primary-a1: var(--grass-a1);
-  --primary-a2: var(--grass-a2);
-  --primary-a3: var(--grass-a3);
-  --primary-a4: var(--grass-a4);
-  --primary-a5: var(--grass-a5);
-  --primary-a6: var(--grass-a6);
-  --primary-a7: var(--grass-a7);
-  --primary-a8: var(--grass-a8);
-  --primary-a9: var(--grass-a9);
-  --primary-a10: var(--grass-a10);
-  --primary-a11: var(--grass-a11);
-  --primary-a12: var(--grass-a12);
+  --color-primary-a1: var(--grass-a1);
+  --color-primary-a2: var(--grass-a2);
+  --color-primary-a3: var(--grass-a3);
+  --color-primary-a4: var(--grass-a4);
+  --color-primary-a5: var(--grass-a5);
+  --color-primary-a6: var(--grass-a6);
+  --color-primary-a7: var(--grass-a7);
+  --color-primary-a8: var(--grass-a8);
+  --color-primary-a9: var(--grass-a9);
+  --color-primary-a10: var(--grass-a10);
+  --color-primary-a11: var(--grass-a11);
+  --color-primary-a12: var(--grass-a12);
 
-  --primary-contrast: var(--grass-contrast);
-  --primary-surface: var(--grass-surface);
-  --primary-indicator: var(--grass-indicator);
-  --primary-track: var(--grass-track);
+  --color-primary-contrast: var(--grass-contrast);
+  --color-primary-surface: var(--grass-surface);
+  --color-primary-indicator: var(--grass-indicator);
+  --color-primary-track: var(--grass-track);
 }
 
 [data-secondary="grass"] {
-  --secondary-1: var(--grass-1);
-  --secondary-2: var(--grass-2);
-  --secondary-3: var(--grass-3);
-  --secondary-4: var(--grass-4);
-  --secondary-5: var(--grass-5);
-  --secondary-6: var(--grass-6);
-  --secondary-7: var(--grass-7);
-  --secondary-8: var(--grass-8);
-  --secondary-9: var(--grass-9);
-  --secondary-10: var(--grass-10);
-  --secondary-11: var(--grass-11);
-  --secondary-12: var(--grass-12);
+  --color-secondary-1: var(--grass-1);
+  --color-secondary-2: var(--grass-2);
+  --color-secondary-3: var(--grass-3);
+  --color-secondary-4: var(--grass-4);
+  --color-secondary-5: var(--grass-5);
+  --color-secondary-6: var(--grass-6);
+  --color-secondary-7: var(--grass-7);
+  --color-secondary-8: var(--grass-8);
+  --color-secondary-9: var(--grass-9);
+  --color-secondary-10: var(--grass-10);
+  --color-secondary-11: var(--grass-11);
+  --color-secondary-12: var(--grass-12);
 
-  --secondary-a1: var(--grass-a1);
-  --secondary-a2: var(--grass-a2);
-  --secondary-a3: var(--grass-a3);
-  --secondary-a4: var(--grass-a4);
-  --secondary-a5: var(--grass-a5);
-  --secondary-a6: var(--grass-a6);
-  --secondary-a7: var(--grass-a7);
-  --secondary-a8: var(--grass-a8);
-  --secondary-a9: var(--grass-a9);
-  --secondary-a10: var(--grass-a10);
-  --secondary-a11: var(--grass-a11);
-  --secondary-a12: var(--grass-a12);
+  --color-secondary-a1: var(--grass-a1);
+  --color-secondary-a2: var(--grass-a2);
+  --color-secondary-a3: var(--grass-a3);
+  --color-secondary-a4: var(--grass-a4);
+  --color-secondary-a5: var(--grass-a5);
+  --color-secondary-a6: var(--grass-a6);
+  --color-secondary-a7: var(--grass-a7);
+  --color-secondary-a8: var(--grass-a8);
+  --color-secondary-a9: var(--grass-a9);
+  --color-secondary-a10: var(--grass-a10);
+  --color-secondary-a11: var(--grass-a11);
+  --color-secondary-a12: var(--grass-a12);
 
-  --secondary-contrast: var(--grass-contrast);
-  --secondary-surface: var(--grass-surface);
-  --secondary-indicator: var(--grass-indicator);
-  --secondary-track: var(--grass-track);
+  --color-secondary-contrast: var(--grass-contrast);
+  --color-secondary-surface: var(--grass-surface);
+  --color-secondary-indicator: var(--grass-indicator);
+  --color-secondary-track: var(--grass-track);
 }
