--- a/src/styles/radix-colors/green.css
+++ b/src/styles/radix-colors/green.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="green"] {
-  --primary-1: var(--green-1);
-  --primary-2: var(--green-2);
-  --primary-3: var(--green-3);
-  --primary-4: var(--green-4);
-  --primary-5: var(--green-5);
-  --primary-6: var(--green-6);
-  --primary-7: var(--green-7);
-  --primary-8: var(--green-8);
-  --primary-9: var(--green-9);
-  --primary-10: var(--green-10);
-  --primary-11: var(--green-11);
-  --primary-12: var(--green-12);
+  --color-primary-1: var(--green-1);
+  --color-primary-2: var(--green-2);
+  --color-primary-3: var(--green-3);
+  --color-primary-4: var(--green-4);
+  --color-primary-5: var(--green-5);
+  --color-primary-6: var(--green-6);
+  --color-primary-7: var(--green-7);
+  --color-primary-8: var(--green-8);
+  --color-primary-9: var(--green-9);
+  --color-primary-10: var(--green-10);
+  --color-primary-11: var(--green-11);
+  --color-primary-12: var(--green-12);
 
-  --primary-a1: var(--green-a1);
-  --primary-a2: var(--green-a2);
-  --primary-a3: var(--green-a3);
-  --primary-a4: var(--green-a4);
-  --primary-a5: var(--green-a5);
-  --primary-a6: var(--green-a6);
-  --primary-a7: var(--green-a7);
-  --primary-a8: var(--green-a8);
-  --primary-a9: var(--green-a9);
-  --primary-a10: var(--green-a10);
-  --primary-a11: var(--green-a11);
-  --primary-a12: var(--green-a12);
+  --color-primary-a1: var(--green-a1);
+  --color-primary-a2: var(--green-a2);
+  --color-primary-a3: var(--green-a3);
+  --color-primary-a4: var(--green-a4);
+  --color-primary-a5: var(--green-a5);
+  --color-primary-a6: var(--green-a6);
+  --color-primary-a7: var(--green-a7);
+  --color-primary-a8: var(--green-a8);
+  --color-primary-a9: var(--green-a9);
+  --color-primary-a10: var(--green-a10);
+  --color-primary-a11: var(--green-a11);
+  --color-primary-a12: var(--green-a12);
 
-  --primary-contrast: var(--green-contrast);
-  --primary-surface: var(--green-surface);
-  --primary-indicator: var(--green-indicator);
-  --primary-track: var(--green-track);
+  --color-primary-contrast: var(--green-contrast);
+  --color-primary-surface: var(--green-surface);
+  --color-primary-indicator: var(--green-indicator);
+  --color-primary-track: var(--green-track);
 }
 
 [data-secondary="green"] {
-  --secondary-1: var(--green-1);
-  --secondary-2: var(--green-2);
-  --secondary-3: var(--green-3);
-  --secondary-4: var(--green-4);
-  --secondary-5: var(--green-5);
-  --secondary-6: var(--green-6);
-  --secondary-7: var(--green-7);
-  --secondary-8: var(--green-8);
-  --secondary-9: var(--green-9);
-  --secondary-10: var(--green-10);
-  --secondary-11: var(--green-11);
-  --secondary-12: var(--green-12);
+  --color-secondary-1: var(--green-1);
+  --color-secondary-2: var(--green-2);
+  --color-secondary-3: var(--green-3);
+  --color-secondary-4: var(--green-4);
+  --color-secondary-5: var(--green-5);
+  --color-secondary-6: var(--green-6);
+  --color-secondary-7: var(--green-7);
+  --color-secondary-8: var(--green-8);
+  --color-secondary-9: var(--green-9);
+  --color-secondary-10: var(--green-10);
+  --color-secondary-11: var(--green-11);
+  --color-secondary-12: var(--green-12);
 
-  --secondary-a1: var(--green-a1);
-  --secondary-a2: var(--green-a2);
-  --secondary-a3: var(--green-a3);
-  --secondary-a4: var(--green-a4);
-  --secondary-a5: var(--green-a5);
-  --secondary-a6: var(--green-a6);
-  --secondary-a7: var(--green-a7);
-  --secondary-a8: var(--green-a8);
-  --secondary-a9: var(--green-a9);
-  --secondary-a10: var(--green-a10);
-  --secondary-a11: var(--green-a11);
-  --secondary-a12: var(--green-a12);
+  --color-secondary-a1: var(--green-a1);
+  --color-secondary-a2: var(--green-a2);
+  --color-secondary-a3: var(--green-a3);
+  --color-secondary-a4: var(--green-a4);
+  --color-secondary-a5: var(--green-a5);
+  --color-secondary-a6: var(--green-a6);
+  --color-secondary-a7: var(--green-a7);
+  --color-secondary-a8: var(--green-a8);
+  --color-secondary-a9: var(--green-a9);
+  --color-secondary-a10: var(--green-a10);
+  --color-secondary-a11: var(--green-a11);
+  --color-secondary-a12: var(--green-a12);
 
-  --secondary-contrast: var(--green-contrast);
-  --secondary-surface: var(--green-surface);
-  --secondary-indicator: var(--green-indicator);
-  --secondary-track: var(--green-track);
+  --color-secondary-contrast: var(--green-contrast);
+  --color-secondary-surface: var(--green-surface);
+  --color-secondary-indicator: var(--green-indicator);
+  --color-secondary-track: var(--green-track);
 }
