--- a/src/styles/radix-colors/indigo.css
+++ b/src/styles/radix-colors/indigo.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="indigo"] {
-  --primary-1: var(--indigo-1);
-  --primary-2: var(--indigo-2);
-  --primary-3: var(--indigo-3);
-  --primary-4: var(--indigo-4);
-  --primary-5: var(--indigo-5);
-  --primary-6: var(--indigo-6);
-  --primary-7: var(--indigo-7);
-  --primary-8: var(--indigo-8);
-  --primary-9: var(--indigo-9);
-  --primary-10: var(--indigo-10);
-  --primary-11: var(--indigo-11);
-  --primary-12: var(--indigo-12);
+  --color-primary-1: var(--indigo-1);
+  --color-primary-2: var(--indigo-2);
+  --color-primary-3: var(--indigo-3);
+  --color-primary-4: var(--indigo-4);
+  --color-primary-5: var(--indigo-5);
+  --color-primary-6: var(--indigo-6);
+  --color-primary-7: var(--indigo-7);
+  --color-primary-8: var(--indigo-8);
+  --color-primary-9: var(--indigo-9);
+  --color-primary-10: var(--indigo-10);
+  --color-primary-11: var(--indigo-11);
+  --color-primary-12: var(--indigo-12);
 
-  --primary-a1: var(--indigo-a1);
-  --primary-a2: var(--indigo-a2);
-  --primary-a3: var(--indigo-a3);
-  --primary-a4: var(--indigo-a4);
-  --primary-a5: var(--indigo-a5);
-  --primary-a6: var(--indigo-a6);
-  --primary-a7: var(--indigo-a7);
-  --primary-a8: var(--indigo-a8);
-  --primary-a9: var(--indigo-a9);
-  --primary-a10: var(--indigo-a10);
-  --primary-a11: var(--indigo-a11);
-  --primary-a12: var(--indigo-a12);
+  --color-primary-a1: var(--indigo-a1);
+  --color-primary-a2: var(--indigo-a2);
+  --color-primary-a3: var(--indigo-a3);
+  --color-primary-a4: var(--indigo-a4);
+  --color-primary-a5: var(--indigo-a5);
+  --color-primary-a6: var(--indigo-a6);
+  --color-primary-a7: var(--indigo-a7);
+  --color-primary-a8: var(--indigo-a8);
+  --color-primary-a9: var(--indigo-a9);
+  --color-primary-a10: var(--indigo-a10);
+  --color-primary-a11: var(--indigo-a11);
+  --color-primary-a12: var(--indigo-a12);
 
-  --primary-contrast: var(--indigo-contrast);
-  --primary-surface: var(--indigo-surface);
-  --primary-indicator: var(--indigo-indicator);
-  --primary-track: var(--indigo-track);
+  --color-primary-contrast: var(--indigo-contrast);
+  --color-primary-surface: var(--indigo-surface);
+  --color-primary-indicator: var(--indigo-indicator);
+  --color-primary-track: var(--indigo-track);
 }
 
 [data-secondary="indigo"] {
-  --secondary-1: var(--indigo-1);
-  --secondary-2: var(--indigo-2);
-  --secondary-3: var(--indigo-3);
-  --secondary-4: var(--indigo-4);
-  --secondary-5: var(--indigo-5);
-  --secondary-6: var(--indigo-6);
-  --secondary-7: var(--indigo-7);
-  --secondary-8: var(--indigo-8);
-  --secondary-9: var(--indigo-9);
-  --secondary-10: var(--indigo-10);
-  --secondary-11: var(--indigo-11);
-  --secondary-12: var(--indigo-12);
+  --color-secondary-1: var(--indigo-1);
+  --color-secondary-2: var(--indigo-2);
+  --color-secondary-3: var(--indigo-3);
+  --color-secondary-4: var(--indigo-4);
+  --color-secondary-5: var(--indigo-5);
+  --color-secondary-6: var(--indigo-6);
+  --color-secondary-7: var(--indigo-7);
+  --color-secondary-8: var(--indigo-8);
+  --color-secondary-9: var(--indigo-9);
+  --color-secondary-10: var(--indigo-10);
+  --color-secondary-11: var(--indigo-11);
+  --color-secondary-12: var(--indigo-12);
 
-  --secondary-a1: var(--indigo-a1);
-  --secondary-a2: var(--indigo-a2);
-  --secondary-a3: var(--indigo-a3);
-  --secondary-a4: var(--indigo-a4);
-  --secondary-a5: var(--indigo-a5);
-  --secondary-a6: var(--indigo-a6);
-  --secondary-a7: var(--indigo-a7);
-  --secondary-a8: var(--indigo-a8);
-  --secondary-a9: var(--indigo-a9);
-  --secondary-a10: var(--indigo-a10);
-  --secondary-a11: var(--indigo-a11);
-  --secondary-a12: var(--indigo-a12);
+  --color-secondary-a1: var(--indigo-a1);
+  --color-secondary-a2: var(--indigo-a2);
+  --color-secondary-a3: var(--indigo-a3);
+  --color-secondary-a4: var(--indigo-a4);
+  --color-secondary-a5: var(--indigo-a5);
+  --color-secondary-a6: var(--indigo-a6);
+  --color-secondary-a7: var(--indigo-a7);
+  --color-secondary-a8: var(--indigo-a8);
+  --color-secondary-a9: var(--indigo-a9);
+  --color-secondary-a10: var(--indigo-a10);
+  --color-secondary-a11: var(--indigo-a11);
+  --color-secondary-a12: var(--indigo-a12);
 
-  --secondary-contrast: var(--indigo-contrast);
-  --secondary-surface: var(--indigo-surface);
-  --secondary-indicator: var(--indigo-indicator);
-  --secondary-track: var(--indigo-track);
+  --color-secondary-contrast: var(--indigo-contrast);
+  --color-secondary-surface: var(--indigo-surface);
+  --color-secondary-indicator: var(--indigo-indicator);
+  --color-secondary-track: var(--indigo-track);
 }
