--- a/src/styles/radix-colors/iris.css
+++ b/src/styles/radix-colors/iris.css
@@ -41,67 +41,67 @@
 [data-primary="iris"] .dark  */
 
 [data-primary="iris"] {
-  --primary-1: var(--iris-1);
-  --primary-2: var(--iris-2);
-  --primary-3: var(--iris-3);
-  --primary-4: var(--iris-4);
-  --primary-5: var(--iris-5);
-  --primary-6: var(--iris-6);
-  --primary-7: var(--iris-7);
-  --primary-8: var(--iris-8);
-  --primary-9: var(--iris-9);
-  --primary-10: var(--iris-10);
-  --primary-11: var(--iris-11);
-  --primary-12: var(--iris-12);
+  --color-primary-1: var(--iris-1);
+  --color-primary-2: var(--iris-2);
+  --color-primary-3: var(--iris-3);
+  --color-primary-4: var(--iris-4);
+  --color-primary-5: var(--iris-5);
+  --color-primary-6: var(--iris-6);
+  --color-primary-7: var(--iris-7);
+  --color-primary-8: var(--iris-8);
+  --color-primary-9: var(--iris-9);
+  --color-primary-10: var(--iris-10);
+  --color-primary-11: var(--iris-11);
+  --color-primary-12: var(--iris-12);
 
-  --primary-a1: var(--iris-a1);
-  --primary-a2: var(--iris-a2);
-  --primary-a3: var(--iris-a3);
-  --primary-a4: var(--iris-a4);
-  --primary-a5: var(--iris-a5);
-  --primary-a6: var(--iris-a6);
-  --primary-a7: var(--iris-a7);
-  --primary-a8: var(--iris-a8);
-  --primary-a9: var(--iris-a9);
-  --primary-a10: var(--iris-a10);
-  --primary-a11: var(--iris-a11);
-  --primary-a12: var(--iris-a12);
+  --color-primary-a1: var(--iris-a1);
+  --color-primary-a2: var(--iris-a2);
+  --color-primary-a3: var(--iris-a3);
+  --color-primary-a4: var(--iris-a4);
+  --color-primary-a5: var(--iris-a5);
+  --color-primary-a6: var(--iris-a6);
+  --color-primary-a7: var(--iris-a7);
+  --color-primary-a8: var(--iris-a8);
+  --color-primary-a9: var(--iris-a9);
+  --color-primary-a10: var(--iris-a10);
+  --color-primary-a11: var(--iris-a11);
+  --color-primary-a12: var(--iris-a12);
 
-  --primary-contrast: var(--iris-contrast);
-  --primary-surface: var(--iris-surface);
-  --primary-indicator: var(--iris-indicator);
-  --primary-track: var(--iris-track);
+  --color-primary-contrast: var(--iris-contrast);
+  --color-primary-surface: var(--iris-surface);
+  --color-primary-indicator: var(--iris-indicator);
+  --color-primary-track: var(--iris-track);
 }
 
 [data-secondary="iris"] {
-  --secondary-1: var(--iris-1);
-  --secondary-2: var(--iris-2);
-  --secondary-3: var(--iris-3);
-  --secondary-4: var(--iris-4);
-  --secondary-5: var(--iris-5);
-  --secondary-6: var(--iris-6);
-  --secondary-7: var(--iris-7);
-  --secondary-8: var(--iris-8);
-  --secondary-9: var(--iris-9);
-  --secondary-10: var(--iris-10);
-  --secondary-11: var(--iris-11);
-  --secondary-12: var(--iris-12);
+  --color-secondary-1: var(--iris-1);
+  --color-secondary-2: var(--iris-2);
+  --color-secondary-3: var(--iris-3);
+  --color-secondary-4: var(--iris-4);
+  --color-secondary-5: var(--iris-5);
+  --color-secondary-6: var(--iris-6);
+  --color-secondary-7: var(--iris-7);
+  --color-secondary-8: var(--iris-8);
+  --color-secondary-9: var(--iris-9);
+  --color-secondary-10: var(--iris-10);
+  --color-secondary-11: var(--iris-11);
+  --color-secondary-12: var(--iris-12);
 
-  --secondary-a1: var(--iris-a1);
-  --secondary-a2: var(--iris-a2);
-  --secondary-a3: var(--iris-a3);
-  --secondary-a4: var(--iris-a4);
-  --secondary-a5: var(--iris-a5);
-  --secondary-a6: var(--iris-a6);
-  --secondary-a7: var(--iris-a7);
-  --secondary-a8: var(--iris-a8);
-  --secondary-a9: var(--iris-a9);
-  --secondary-a10: var(--iris-a10);
-  --secondary-a11: var(--iris-a11);
-  --secondary-a12: var(--iris-a12);
+  --color-secondary-a1: var(--iris-a1);
+  --color-secondary-a2: var(--iris-a2);
+  --color-secondary-a3: var(--iris-a3);
+  --color-secondary-a4: var(--iris-a4);
+  --color-secondary-a5: var(--iris-a5);
+  --color-secondary-a6: var(--iris-a6);
+  --color-secondary-a7: var(--iris-a7);
+  --color-secondary-a8: var(--iris-a8);
+  --color-secondary-a9: var(--iris-a9);
+  --color-secondary-a10: var(--iris-a10);
+  --color-secondary-a11: var(--iris-a11);
+  --color-secondary-a12: var(--iris-a12);
 
-  --secondary-contrast: var(--iris-contrast);
-  --secondary-surface: var(--iris-surface);
-  --secondary-indicator: var(--iris-indicator);
-  --secondary-track: var(--iris-track);
+  --color-secondary-contrast: var(--iris-contrast);
+  --color-secondary-surface: var(--iris-surface);
+  --color-secondary-indicator: var(--iris-indicator);
+  --color-secondary-track: var(--iris-track);
 }
