--- a/src/styles/radix-colors/jade.css
+++ b/src/styles/radix-colors/jade.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="jade"] {
-  --primary-1: var(--jade-1);
-  --primary-2: var(--jade-2);
-  --primary-3: var(--jade-3);
-  --primary-4: var(--jade-4);
-  --primary-5: var(--jade-5);
-  --primary-6: var(--jade-6);
-  --primary-7: var(--jade-7);
-  --primary-8: var(--jade-8);
-  --primary-9: var(--jade-9);
-  --primary-10: var(--jade-10);
-  --primary-11: var(--jade-11);
-  --primary-12: var(--jade-12);
+  --color-primary-1: var(--jade-1);
+  --color-primary-2: var(--jade-2);
+  --color-primary-3: var(--jade-3);
+  --color-primary-4: var(--jade-4);
+  --color-primary-5: var(--jade-5);
+  --color-primary-6: var(--jade-6);
+  --color-primary-7: var(--jade-7);
+  --color-primary-8: var(--jade-8);
+  --color-primary-9: var(--jade-9);
+  --color-primary-10: var(--jade-10);
+  --color-primary-11: var(--jade-11);
+  --color-primary-12: var(--jade-12);
 
-  --primary-a1: var(--jade-a1);
-  --primary-a2: var(--jade-a2);
-  --primary-a3: var(--jade-a3);
-  --primary-a4: var(--jade-a4);
-  --primary-a5: var(--jade-a5);
-  --primary-a6: var(--jade-a6);
-  --primary-a7: var(--jade-a7);
-  --primary-a8: var(--jade-a8);
-  --primary-a9: var(--jade-a9);
-  --primary-a10: var(--jade-a10);
-  --primary-a11: var(--jade-a11);
-  --primary-a12: var(--jade-a12);
+  --color-primary-a1: var(--jade-a1);
+  --color-primary-a2: var(--jade-a2);
+  --color-primary-a3: var(--jade-a3);
+  --color-primary-a4: var(--jade-a4);
+  --color-primary-a5: var(--jade-a5);
+  --color-primary-a6: var(--jade-a6);
+  --color-primary-a7: var(--jade-a7);
+  --color-primary-a8: var(--jade-a8);
+  --color-primary-a9: var(--jade-a9);
+  --color-primary-a10: var(--jade-a10);
+  --color-primary-a11: var(--jade-a11);
+  --color-primary-a12: var(--jade-a12);
 
-  --primary-contrast: var(--jade-contrast);
-  --primary-surface: var(--jade-surface);
-  --primary-indicator: var(--jade-indicator);
-  --primary-track: var(--jade-track);
+  --color-primary-contrast: var(--jade-contrast);
+  --color-primary-surface: var(--jade-surface);
+  --color-primary-indicator: var(--jade-indicator);
+  --color-primary-track: var(--jade-track);
 }
 
 [data-secondary="jade"] {
-  --secondary-1: var(--jade-1);
-  --secondary-2: var(--jade-2);
-  --secondary-3: var(--jade-3);
-  --secondary-4: var(--jade-4);
-  --secondary-5: var(--jade-5);
-  --secondary-6: var(--jade-6);
-  --secondary-7: var(--jade-7);
-  --secondary-8: var(--jade-8);
-  --secondary-9: var(--jade-9);
-  --secondary-10: var(--jade-10);
-  --secondary-11: var(--jade-11);
-  --secondary-12: var(--jade-12);
+  --color-secondary-1: var(--jade-1);
+  --color-secondary-2: var(--jade-2);
+  --color-secondary-3: var(--jade-3);
+  --color-secondary-4: var(--jade-4);
+  --color-secondary-5: var(--jade-5);
+  --color-secondary-6: var(--jade-6);
+  --color-secondary-7: var(--jade-7);
+  --color-secondary-8: var(--jade-8);
+  --color-secondary-9: var(--jade-9);
+  --color-secondary-10: var(--jade-10);
+  --color-secondary-11: var(--jade-11);
+  --color-secondary-12: var(--jade-12);
 
-  --secondary-a1: var(--jade-a1);
-  --secondary-a2: var(--jade-a2);
-  --secondary-a3: var(--jade-a3);
-  --secondary-a4: var(--jade-a4);
-  --secondary-a5: var(--jade-a5);
-  --secondary-a6: var(--jade-a6);
-  --secondary-a7: var(--jade-a7);
-  --secondary-a8: var(--jade-a8);
-  --secondary-a9: var(--jade-a9);
-  --secondary-a10: var(--jade-a10);
-  --secondary-a11: var(--jade-a11);
-  --secondary-a12: var(--jade-a12);
+  --color-secondary-a1: var(--jade-a1);
+  --color-secondary-a2: var(--jade-a2);
+  --color-secondary-a3: var(--jade-a3);
+  --color-secondary-a4: var(--jade-a4);
+  --color-secondary-a5: var(--jade-a5);
+  --color-secondary-a6: var(--jade-a6);
+  --color-secondary-a7: var(--jade-a7);
+  --color-secondary-a8: var(--jade-a8);
+  --color-secondary-a9: var(--jade-a9);
+  --color-secondary-a10: var(--jade-a10);
+  --color-secondary-a11: var(--jade-a11);
+  --color-secondary-a12: var(--jade-a12);
 
-  --secondary-contrast: var(--jade-contrast);
-  --secondary-surface: var(--jade-surface);
-  --secondary-indicator: var(--jade-indicator);
-  --secondary-track: var(--jade-track);
+  --color-secondary-contrast: var(--jade-contrast);
+  --color-secondary-surface: var(--jade-surface);
+  --color-secondary-indicator: var(--jade-indicator);
+  --color-secondary-track: var(--jade-track);
 }
