--- a/src/styles/radix-colors/lime.css
+++ b/src/styles/radix-colors/lime.css
@@ -38,67 +38,67 @@
 }
 
 [data-primary="lime"] {
-  --primary-1: var(--lime-1);
-  --primary-2: var(--lime-2);
-  --primary-3: var(--lime-3);
-  --primary-4: var(--lime-4);
-  --primary-5: var(--lime-5);
-  --primary-6: var(--lime-6);
-  --primary-7: var(--lime-7);
-  --primary-8: var(--lime-8);
-  --primary-9: var(--lime-9);
-  --primary-10: var(--lime-10);
-  --primary-11: var(--lime-11);
-  --primary-12: var(--lime-12);
+  --color-primary-1: var(--lime-1);
+  --color-primary-2: var(--lime-2);
+  --color-primary-3: var(--lime-3);
+  --color-primary-4: var(--lime-4);
+  --color-primary-5: var(--lime-5);
+  --color-primary-6: var(--lime-6);
+  --color-primary-7: var(--lime-7);
+  --color-primary-8: var(--lime-8);
+  --color-primary-9: var(--lime-9);
+  --color-primary-10: var(--lime-10);
+  --color-primary-11: var(--lime-11);
+  --color-primary-12: var(--lime-12);
 
-  --primary-a1: var(--lime-a1);
-  --primary-a2: var(--lime-a2);
-  --primary-a3: var(--lime-a3);
-  --primary-a4: var(--lime-a4);
-  --primary-a5: var(--lime-a5);
-  --primary-a6: var(--lime-a6);
-  --primary-a7: var(--lime-a7);
-  --primary-a8: var(--lime-a8);
-  --primary-a9: var(--lime-a9);
-  --primary-a10: var(--lime-a10);
-  --primary-a11: var(--lime-a11);
-  --primary-a12: var(--lime-a12);
+  --color-primary-a1: var(--lime-a1);
+  --color-primary-a2: var(--lime-a2);
+  --color-primary-a3: var(--lime-a3);
+  --color-primary-a4: var(--lime-a4);
+  --color-primary-a5: var(--lime-a5);
+  --color-primary-a6: var(--lime-a6);
+  --color-primary-a7: var(--lime-a7);
+  --color-primary-a8: var(--lime-a8);
+  --color-primary-a9: var(--lime-a9);
+  --color-primary-a10: var(--lime-a10);
+  --color-primary-a11: var(--lime-a11);
+  --color-primary-a12: var(--lime-a12);
 
-  --primary-contrast: var(--lime-contrast);
-  --primary-surface: var(--lime-surface);
-  --primary-indicator: var(--lime-indicator);
-  --primary-track: var(--lime-track);
+  --color-primary-contrast: var(--lime-contrast);
+  --color-primary-surface: var(--lime-surface);
+  --color-primary-indicator: var(--lime-indicator);
+  --color-primary-track: var(--lime-track);
 }
 
 [data-secondary="lime"] {
-  --secondary-1: var(--lime-1);
-  --secondary-2: var(--lime-2);
-  --secondary-3: var(--lime-3);
-  --secondary-4: var(--lime-4);
-  --secondary-5: var(--lime-5);
-  --secondary-6: var(--lime-6);
-  --secondary-7: var(--lime-7);
-  --secondary-8: var(--lime-8);
-  --secondary-9: var(--lime-9);
-  --secondary-10: var(--lime-10);
-  --secondary-11: var(--lime-11);
-  --secondary-12: var(--lime-12);
+  --color-secondary-1: var(--lime-1);
+  --color-secondary-2: var(--lime-2);
+  --color-secondary-3: var(--lime-3);
+  --color-secondary-4: var(--lime-4);
+  --color-secondary-5: var(--lime-5);
+  --color-secondary-6: var(--lime-6);
+  --color-secondary-7: var(--lime-7);
+  --color-secondary-8: var(--lime-8);
+  --color-secondary-9: var(--lime-9);
+  --color-secondary-10: var(--lime-10);
+  --color-secondary-11: var(--lime-11);
+  --color-secondary-12: var(--lime-12);
 
-  --secondary-a1: var(--lime-a1);
-  --secondary-a2: var(--lime-a2);
-  --secondary-a3: var(--lime-a3);
-  --secondary-a4: var(--lime-a4);
-  --secondary-a5: var(--lime-a5);
-  --secondary-a6: var(--lime-a6);
-  --secondary-a7: var(--lime-a7);
-  --secondary-a8: var(--lime-a8);
-  --secondary-a9: var(--lime-a9);
-  --secondary-a10: var(--lime-a10);
-  --secondary-a11: var(--lime-a11);
-  --secondary-a12: var(--lime-a12);
+  --color-secondary-a1: var(--lime-a1);
+  --color-secondary-a2: var(--lime-a2);
+  --color-secondary-a3: var(--lime-a3);
+  --color-secondary-a4: var(--lime-a4);
+  --color-secondary-a5: var(--lime-a5);
+  --color-secondary-a6: var(--lime-a6);
+  --color-secondary-a7: var(--lime-a7);
+  --color-secondary-a8: var(--lime-a8);
+  --color-secondary-a9: var(--lime-a9);
+  --color-secondary-a10: var(--lime-a10);
+  --color-secondary-a11: var(--lime-a11);
+  --color-secondary-a12: var(--lime-a12);
 
-  --secondary-contrast: var(--lime-contrast);
-  --secondary-surface: var(--lime-surface);
-  --secondary-indicator: var(--lime-indicator);
-  --secondary-track: var(--lime-track);
+  --color-secondary-contrast: var(--lime-contrast);
+  --color-secondary-surface: var(--lime-surface);
+  --color-secondary-indicator: var(--lime-indicator);
+  --color-secondary-track: var(--lime-track);
 }
