--- a/src/styles/radix-colors/pink.css
+++ b/src/styles/radix-colors/pink.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="pink"] {
-  --primary-1: var(--pink-1);
-  --primary-2: var(--pink-2);
-  --primary-3: var(--pink-3);
-  --primary-4: var(--pink-4);
-  --primary-5: var(--pink-5);
-  --primary-6: var(--pink-6);
-  --primary-7: var(--pink-7);
-  --primary-8: var(--pink-8);
-  --primary-9: var(--pink-9);
-  --primary-10: var(--pink-10);
-  --primary-11: var(--pink-11);
-  --primary-12: var(--pink-12);
+  --color-primary-1: var(--pink-1);
+  --color-primary-2: var(--pink-2);
+  --color-primary-3: var(--pink-3);
+  --color-primary-4: var(--pink-4);
+  --color-primary-5: var(--pink-5);
+  --color-primary-6: var(--pink-6);
+  --color-primary-7: var(--pink-7);
+  --color-primary-8: var(--pink-8);
+  --color-primary-9: var(--pink-9);
+  --color-primary-10: var(--pink-10);
+  --color-primary-11: var(--pink-11);
+  --color-primary-12: var(--pink-12);
 
-  --primary-a1: var(--pink-a1);
-  --primary-a2: var(--pink-a2);
-  --primary-a3: var(--pink-a3);
-  --primary-a4: var(--pink-a4);
-  --primary-a5: var(--pink-a5);
-  --primary-a6: var(--pink-a6);
-  --primary-a7: var(--pink-a7);
-  --primary-a8: var(--pink-a8);
-  --primary-a9: var(--pink-a9);
-  --primary-a10: var(--pink-a10);
-  --primary-a11: var(--pink-a11);
-  --primary-a12: var(--pink-a12);
+  --color-primary-a1: var(--pink-a1);
+  --color-primary-a2: var(--pink-a2);
+  --color-primary-a3: var(--pink-a3);
+  --color-primary-a4: var(--pink-a4);
+  --color-primary-a5: var(--pink-a5);
+  --color-primary-a6: var(--pink-a6);
+  --color-primary-a7: var(--pink-a7);
+  --color-primary-a8: var(--pink-a8);
+  --color-primary-a9: var(--pink-a9);
+  --color-primary-a10: var(--pink-a10);
+  --color-primary-a11: var(--pink-a11);
+  --color-primary-a12: var(--pink-a12);
 
-  --primary-contrast: var(--pink-contrast);
-  --primary-surface: var(--pink-surface);
-  --primary-indicator: var(--pink-indicator);
-  --primary-track: var(--pink-track);
+  --color-primary-contrast: var(--pink-contrast);
+  --color-primary-surface: var(--pink-surface);
+  --color-primary-indicator: var(--pink-indicator);
+  --color-primary-track: var(--pink-track);
 }
 
 [data-secondary="pink"] {
-  --secondary-1: var(--pink-1);
-  --secondary-2: var(--pink-2);
-  --secondary-3: var(--pink-3);
-  --secondary-4: var(--pink-4);
-  --secondary-5: var(--pink-5);
-  --secondary-6: var(--pink-6);
-  --secondary-7: var(--pink-7);
-  --secondary-8: var(--pink-8);
-  --secondary-9: var(--pink-9);
-  --secondary-10: var(--pink-10);
-  --secondary-11: var(--pink-11);
-  --secondary-12: var(--pink-12);
+  --color-secondary-1: var(--pink-1);
+  --color-secondary-2: var(--pink-2);
+  --color-secondary-3: var(--pink-3);
+  --color-secondary-4: var(--pink-4);
+  --color-secondary-5: var(--pink-5);
+  --color-secondary-6: var(--pink-6);
+  --color-secondary-7: var(--pink-7);
+  --color-secondary-8: var(--pink-8);
+  --color-secondary-9: var(--pink-9);
+  --color-secondary-10: var(--pink-10);
+  --color-secondary-11: var(--pink-11);
+  --color-secondary-12: var(--pink-12);
 
-  --secondary-a1: var(--pink-a1);
-  --secondary-a2: var(--pink-a2);
-  --secondary-a3: var(--pink-a3);
-  --secondary-a4: var(--pink-a4);
-  --secondary-a5: var(--pink-a5);
-  --secondary-a6: var(--pink-a6);
-  --secondary-a7: var(--pink-a7);
-  --secondary-a8: var(--pink-a8);
-  --secondary-a9: var(--pink-a9);
-  --secondary-a10: var(--pink-a10);
-  --secondary-a11: var(--pink-a11);
-  --secondary-a12: var(--pink-a12);
+  --color-secondary-a1: var(--pink-a1);
+  --color-secondary-a2: var(--pink-a2);
+  --color-secondary-a3: var(--pink-a3);
+  --color-secondary-a4: var(--pink-a4);
+  --color-secondary-a5: var(--pink-a5);
+  --color-secondary-a6: var(--pink-a6);
+  --color-secondary-a7: var(--pink-a7);
+  --color-secondary-a8: var(--pink-a8);
+  --color-secondary-a9: var(--pink-a9);
+  --color-secondary-a10: var(--pink-a10);
+  --color-secondary-a11: var(--pink-a11);
+  --color-secondary-a12: var(--pink-a12);
 
-  --secondary-contrast: var(--pink-contrast);
-  --secondary-surface: var(--pink-surface);
-  --secondary-indicator: var(--pink-indicator);
-  --secondary-track: var(--pink-track);
+  --color-secondary-contrast: var(--pink-contrast);
+  --color-secondary-surface: var(--pink-surface);
+  --color-secondary-indicator: var(--pink-indicator);
+  --color-secondary-track: var(--pink-track);
 }
