--- a/src/styles/radix-colors/plum.css
+++ b/src/styles/radix-colors/plum.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="plum"] {
-  --primary-1: var(--plum-1);
-  --primary-2: var(--plum-2);
-  --primary-3: var(--plum-3);
-  --primary-4: var(--plum-4);
-  --primary-5: var(--plum-5);
-  --primary-6: var(--plum-6);
-  --primary-7: var(--plum-7);
-  --primary-8: var(--plum-8);
-  --primary-9: var(--plum-9);
-  --primary-10: var(--plum-10);
-  --primary-11: var(--plum-11);
-  --primary-12: var(--plum-12);
+  --color-primary-1: var(--plum-1);
+  --color-primary-2: var(--plum-2);
+  --color-primary-3: var(--plum-3);
+  --color-primary-4: var(--plum-4);
+  --color-primary-5: var(--plum-5);
+  --color-primary-6: var(--plum-6);
+  --color-primary-7: var(--plum-7);
+  --color-primary-8: var(--plum-8);
+  --color-primary-9: var(--plum-9);
+  --color-primary-10: var(--plum-10);
+  --color-primary-11: var(--plum-11);
+  --color-primary-12: var(--plum-12);
 
-  --primary-a1: var(--plum-a1);
-  --primary-a2: var(--plum-a2);
-  --primary-a3: var(--plum-a3);
-  --primary-a4: var(--plum-a4);
-  --primary-a5: var(--plum-a5);
-  --primary-a6: var(--plum-a6);
-  --primary-a7: var(--plum-a7);
-  --primary-a8: var(--plum-a8);
-  --primary-a9: var(--plum-a9);
-  --primary-a10: var(--plum-a10);
-  --primary-a11: var(--plum-a11);
-  --primary-a12: var(--plum-a12);
+  --color-primary-a1: var(--plum-a1);
+  --color-primary-a2: var(--plum-a2);
+  --color-primary-a3: var(--plum-a3);
+  --color-primary-a4: var(--plum-a4);
+  --color-primary-a5: var(--plum-a5);
+  --color-primary-a6: var(--plum-a6);
+  --color-primary-a7: var(--plum-a7);
+  --color-primary-a8: var(--plum-a8);
+  --color-primary-a9: var(--plum-a9);
+  --color-primary-a10: var(--plum-a10);
+  --color-primary-a11: var(--plum-a11);
+  --color-primary-a12: var(--plum-a12);
 
-  --primary-contrast: var(--plum-contrast);
-  --primary-surface: var(--plum-surface);
-  --primary-indicator: var(--plum-indicator);
-  --primary-track: var(--plum-track);
+  --color-primary-contrast: var(--plum-contrast);
+  --color-primary-surface: var(--plum-surface);
+  --color-primary-indicator: var(--plum-indicator);
+  --color-primary-track: var(--plum-track);
 }
 
 [data-secondary="plum"] {
-  --secondary-1: var(--plum-1);
-  --secondary-2: var(--plum-2);
-  --secondary-3: var(--plum-3);
-  --secondary-4: var(--plum-4);
-  --secondary-5: var(--plum-5);
-  --secondary-6: var(--plum-6);
-  --secondary-7: var(--plum-7);
-  --secondary-8: var(--plum-8);
-  --secondary-9: var(--plum-9);
-  --secondary-10: var(--plum-10);
-  --secondary-11: var(--plum-11);
-  --secondary-12: var(--plum-12);
+  --color-secondary-1: var(--plum-1);
+  --color-secondary-2: var(--plum-2);
+  --color-secondary-3: var(--plum-3);
+  --color-secondary-4: var(--plum-4);
+  --color-secondary-5: var(--plum-5);
+  --color-secondary-6: var(--plum-6);
+  --color-secondary-7: var(--plum-7);
+  --color-secondary-8: var(--plum-8);
+  --color-secondary-9: var(--plum-9);
+  --color-secondary-10: var(--plum-10);
+  --color-secondary-11: var(--plum-11);
+  --color-secondary-12: var(--plum-12);
 
-  --secondary-a1: var(--plum-a1);
-  --secondary-a2: var(--plum-a2);
-  --secondary-a3: var(--plum-a3);
-  --secondary-a4: var(--plum-a4);
-  --secondary-a5: var(--plum-a5);
-  --secondary-a6: var(--plum-a6);
-  --secondary-a7: var(--plum-a7);
-  --secondary-a8: var(--plum-a8);
-  --secondary-a9: var(--plum-a9);
-  --secondary-a10: var(--plum-a10);
-  --secondary-a11: var(--plum-a11);
-  --secondary-a12: var(--plum-a12);
+  --color-secondary-a1: var(--plum-a1);
+  --color-secondary-a2: var(--plum-a2);
+  --color-secondary-a3: var(--plum-a3);
+  --color-secondary-a4: var(--plum-a4);
+  --color-secondary-a5: var(--plum-a5);
+  --color-secondary-a6: var(--plum-a6);
+  --color-secondary-a7: var(--plum-a7);
+  --color-secondary-a8: var(--plum-a8);
+  --color-secondary-a9: var(--plum-a9);
+  --color-secondary-a10: var(--plum-a10);
+  --color-secondary-a11: var(--plum-a11);
+  --color-secondary-a12: var(--plum-a12);
 
-  --secondary-contrast: var(--plum-contrast);
-  --secondary-surface: var(--plum-surface);
-  --secondary-indicator: var(--plum-indicator);
-  --secondary-track: var(--plum-track);
+  --color-secondary-contrast: var(--plum-contrast);
+  --color-secondary-surface: var(--plum-surface);
+  --color-secondary-indicator: var(--plum-indicator);
+  --color-secondary-track: var(--plum-track);
 }
