--- a/src/styles/radix-colors/purple.css
+++ b/src/styles/radix-colors/purple.css
@@ -35,67 +35,67 @@
 }
 
 [data-primary="purple"] {
-  --primary-1: var(--purple-1);
-  --primary-2: var(--purple-2);
-  --primary-3: var(--purple-3);
-  --primary-4: var(--purple-4);
-  --primary-5: var(--purple-5);
-  --primary-6: var(--purple-6);
-  --primary-7: var(--purple-7);
-  --primary-8: var(--purple-8);
-  --primary-9: var(--purple-9);
-  --primary-10: var(--purple-10);
-  --primary-11: var(--purple-11);
-  --primary-12: var(--purple-12);
+  --color-primary-1: var(--purple-1);
+  --color-primary-2: var(--purple-2);
+  --color-primary-3: var(--purple-3);
+  --color-primary-4: var(--purple-4);
+  --color-primary-5: var(--purple-5);
+  --color-primary-6: var(--purple-6);
+  --color-primary-7: var(--purple-7);
+  --color-primary-8: var(--purple-8);
+  --color-primary-9: var(--purple-9);
+  --color-primary-10: var(--purple-10);
+  --color-primary-11: var(--purple-11);
+  --color-primary-12: var(--purple-12);
 
-  --primary-a1: var(--purple-a1);
-  --primary-a2: var(--purple-a2);
-  --primary-a3: var(--purple-a3);
-  --primary-a4: var(--purple-a4);
-  --primary-a5: var(--purple-a5);
-  --primary-a6: var(--purple-a6);
-  --primary-a7: var(--purple-a7);
-  --primary-a8: var(--purple-a8);
-  --primary-a9: var(--purple-a9);
-  --primary-a10: var(--purple-a10);
-  --primary-a11: var(--purple-a11);
-  --primary-a12: var(--purple-a12);
+  --color-primary-a1: var(--purple-a1);
+  --color-primary-a2: var(--purple-a2);
+  --color-primary-a3: var(--purple-a3);
+  --color-primary-a4: var(--purple-a4);
+  --color-primary-a5: var(--purple-a5);
+  --color-primary-a6: var(--purple-a6);
+  --color-primary-a7: var(--purple-a7);
+  --color-primary-a8: var(--purple-a8);
+  --color-primary-a9: var(--purple-a9);
+  --color-primary-a10: var(--purple-a10);
+  --color-primary-a11: var(--purple-a11);
+  --color-primary-a12: var(--purple-a12);
 
-  --primary-contrast: var(--purple-contrast);
-  --primary-surface: var(--purple-surface);
-  --primary-indicator: var(--purple-indicator);
-  --primary-track: var(--purple-track);
+  --color-primary-contrast: var(--purple-contrast);
+  --color-primary-surface: var(--purple-surface);
+  --color-primary-indicator: var(--purple-indicator);
+  --color-primary-track: var(--purple-track);
 }
 
 [data-secondary="purple"] {
-  --secondary-1: var(--purple-1);
-  --secondary-2: var(--purple-2);
-  --secondary-3: var(--purple-3);
-  --secondary-4: var(--purple-4);
-  --secondary-5: var(--purple-5);
-  --secondary-6: var(--purple-6);
-  --secondary-7: var(--purple-7);
-  --secondary-8: var(--purple-8);
-  --secondary-9: var(--purple-9);
-  --secondary-10: var(--purple-10);
-  --secondary-11: var(--purple-11);
-  --secondary-12: var(--purple-12);
+  --color-secondary-1: var(--purple-1);
+  --color-secondary-2: var(--purple-2);
+  --color-secondary-3: var(--purple-3);
+  --color-secondary-4: var(--purple-4);
+  --color-secondary-5: var(--purple-5);
+  --color-secondary-6: var(--purple-6);
+  --color-secondary-7: var(--purple-7);
+  --color-secondary-8: var(--purple-8);
+  --color-secondary-9: var(--purple-9);
+  --color-secondary-10: var(--purple-10);
+  --color-secondary-11: var(--purple-11);
+  --color-secondary-12: var(--purple-12);
 
-  --secondary-a1: var(--purple-a1);
-  --secondary-a2: var(--purple-a2);
-  --secondary-a3: var(--purple-a3);
-  --secondary-a4: var(--purple-a4);
-  --secondary-a5: var(--purple-a5);
-  --secondary-a6: var(--purple-a6);
-  --secondary-a7: var(--purple-a7);
-  --secondary-a8: var(--purple-a8);
-  --secondary-a9: var(--purple-a9);
-  --secondary-a10: var(--purple-a10);
-  --secondary-a11: var(--purple-a11);
-  --secondary-a12: var(--purple-a12);
+  --color-secondary-a1: var(--purple-a1);
+  --color-secondary-a2: var(--purple-a2);
+  --color-secondary-a3: var(--purple-a3);
+  --color-secondary-a4: var(--purple-a4);
+  --color-secondary-a5: var(--purple-a5);
+  --color-secondary-a6: var(--purple-a6);
+  --color-secondary-a7: var(--purple-a7);
+  --color-secondary-a8: var(--purple-a8);
+  --color-secondary-a9: var(--purple-a9);
+  --color-secondary-a10: var(--purple-a10);
+  --color-secondary-a11: var(--purple-a11);
+  --color-secondary-a12: var(--purple-a12);
 
-  --secondary-contrast: var(--purple-contrast);
-  --secondary-surface: var(--purple-surface);
-  --secondary-indicator: var(--purple-indicator);
-  --secondary-track: var(--purple-track);
+  --color-secondary-contrast: var(--purple-contrast);
+  --color-secondary-surface: var(--purple-surface);
+  --color-secondary-indicator: var(--purple-indicator);
+  --color-secondary-track: var(--purple-track);
 }
