--- a/src/styles/radix-colors/sky.css
+++ b/src/styles/radix-colors/sky.css
@@ -38,67 +38,67 @@
 }
 
 [data-primary="sky"] {
-  --primary-1: var(--sky-1);
-  --primary-2: var(--sky-2);
-  --primary-3: var(--sky-3);
-  --primary-4: var(--sky-4);
-  --primary-5: var(--sky-5);
-  --primary-6: var(--sky-6);
-  --primary-7: var(--sky-7);
-  --primary-8: var(--sky-8);
-  --primary-9: var(--sky-9);
-  --primary-10: var(--sky-10);
-  --primary-11: var(--sky-11);
-  --primary-12: var(--sky-12);
+  --color-primary-1: var(--sky-1);
+  --color-primary-2: var(--sky-2);
+  --color-primary-3: var(--sky-3);
+  --color-primary-4: var(--sky-4);
+  --color-primary-5: var(--sky-5);
+  --color-primary-6: var(--sky-6);
+  --color-primary-7: var(--sky-7);
+  --color-primary-8: var(--sky-8);
+  --color-primary-9: var(--sky-9);
+  --color-primary-10: var(--sky-10);
+  --color-primary-11: var(--sky-11);
+  --color-primary-12: var(--sky-12);
 
-  --primary-a1: var(--sky-a1);
-  --primary-a2: var(--sky-a2);
-  --primary-a3: var(--sky-a3);
-  --primary-a4: var(--sky-a4);
-  --primary-a5: var(--sky-a5);
-  --primary-a6: var(--sky-a6);
-  --primary-a7: var(--sky-a7);
-  --primary-a8: var(--sky-a8);
-  --primary-a9: var(--sky-a9);
-  --primary-a10: var(--sky-a10);
-  --primary-a11: var(--sky-a11);
-  --primary-a12: var(--sky-a12);
+  --color-primary-a1: var(--sky-a1);
+  --color-primary-a2: var(--sky-a2);
+  --color-primary-a3: var(--sky-a3);
+  --color-primary-a4: var(--sky-a4);
+  --color-primary-a5: var(--sky-a5);
+  --color-primary-a6: var(--sky-a6);
+  --color-primary-a7: var(--sky-a7);
+  --color-primary-a8: var(--sky-a8);
+  --color-primary-a9: var(--sky-a9);
+  --color-primary-a10: var(--sky-a10);
+  --color-primary-a11: var(--sky-a11);
+  --color-primary-a12: var(--sky-a12);
 
-  --primary-contrast: var(--sky-contrast);
-  --primary-surface: var(--sky-surface);
-  --primary-indicator: var(--sky-indicator);
-  --primary-track: var(--sky-track);
+  --color-primary-contrast: var(--sky-contrast);
+  --color-primary-surface: var(--sky-surface);
+  --color-primary-indicator: var(--sky-indicator);
+  --color-primary-track: var(--sky-track);
 }
 
 [data-secondary="sky"] {
-  --secondary-1: var(--sky-1);
-  --secondary-2: var(--sky-2);
-  --secondary-3: var(--sky-3);
-  --secondary-4: var(--sky-4);
-  --secondary-5: var(--sky-5);
-  --secondary-6: var(--sky-6);
-  --secondary-7: var(--sky-7);
-  --secondary-8: var(--sky-8);
-  --secondary-9: var(--sky-9);
-  --secondary-10: var(--sky-10);
-  --secondary-11: var(--sky-11);
-  --secondary-12: var(--sky-12);
+  --color-secondary-1: var(--sky-1);
+  --color-secondary-2: var(--sky-2);
+  --color-secondary-3: var(--sky-3);
+  --color-secondary-4: var(--sky-4);
+  --color-secondary-5: var(--sky-5);
+  --color-secondary-6: var(--sky-6);
+  --color-secondary-7: var(--sky-7);
+  --color-secondary-8: var(--sky-8);
+  --color-secondary-9: var(--sky-9);
+  --color-secondary-10: var(--sky-10);
+  --color-secondary-11: var(--sky-11);
+  --color-secondary-12: var(--sky-12);
 
-  --secondary-a1: var(--sky-a1);
-  --secondary-a2: var(--sky-a2);
-  --secondary-a3: var(--sky-a3);
-  --secondary-a4: var(--sky-a4);
-  --secondary-a5: var(--sky-a5);
-  --secondary-a6: var(--sky-a6);
-  --secondary-a7: var(--sky-a7);
-  --secondary-a8: var(--sky-a8);
-  --secondary-a9: var(--sky-a9);
-  --secondary-a10: var(--sky-a10);
-  --secondary-a11: var(--sky-a11);
-  --secondary-a12: var(--sky-a12);
+  --color-secondary-a1: var(--sky-a1);
+  --color-secondary-a2: var(--sky-a2);
+  --color-secondary-a3: var(--sky-a3);
+  --color-secondary-a4: var(--sky-a4);
+  --color-secondary-a5: var(--sky-a5);
+  --color-secondary-a6: var(--sky-a6);
+  --color-secondary-a7: var(--sky-a7);
+  --color-secondary-a8: var(--sky-a8);
+  --color-secondary-a9: var(--sky-a9);
+  --color-secondary-a10: var(--sky-a10);
+  --color-secondary-a11: var(--sky-a11);
+  --color-secondary-a12: var(--sky-a12);
 
-  --secondary-contrast: var(--sky-contrast);
-  --secondary-surface: var(--sky-surface);
-  --secondary-indicator: var(--sky-indicator);
-  --secondary-track: var(--sky-track);
+  --color-secondary-contrast: var(--sky-contrast);
+  --color-secondary-surface: var(--sky-surface);
+  --color-secondary-indicator: var(--sky-indicator);
+  --color-secondary-track: var(--sky-track);
 }
