--- a/src/styles/radix-colors/violet.css
+++ b/src/styles/radix-colors/violet.css
@@ -41,67 +41,67 @@
 [data-primary="violet"] .dark */
 
 [data-primary="violet"] {
-  --primary-1: var(--violet-1);
-  --primary-2: var(--violet-2);
-  --primary-3: var(--violet-3);
-  --primary-4: var(--violet-4);
-  --primary-5: var(--violet-5);
-  --primary-6: var(--violet-6);
-  --primary-7: var(--violet-7);
-  --primary-8: var(--violet-8);
-  --primary-9: var(--violet-9);
-  --primary-10: var(--violet-10);
-  --primary-11: var(--violet-11);
-  --primary-12: var(--violet-12);
+  --color-primary-1: var(--violet-1);
+  --color-primary-2: var(--violet-2);
+  --color-primary-3: var(--violet-3);
+  --color-primary-4: var(--violet-4);
+  --color-primary-5: var(--violet-5);
+  --color-primary-6: var(--violet-6);
+  --color-primary-7: var(--violet-7);
+  --color-primary-8: var(--violet-8);
+  --color-primary-9: var(--violet-9);
+  --color-primary-10: var(--violet-10);
+  --color-primary-11: var(--violet-11);
+  --color-primary-12: var(--violet-12);
 
-  --primary-a1: var(--violet-a1);
-  --primary-a2: var(--violet-a2);
-  --primary-a3: var(--violet-a3);
-  --primary-a4: var(--violet-a4);
-  --primary-a5: var(--violet-a5);
-  --primary-a6: var(--violet-a6);
-  --primary-a7: var(--violet-a7);
-  --primary-a8: var(--violet-a8);
-  --primary-a9: var(--violet-a9);
-  --primary-a10: var(--violet-a10);
-  --primary-a11: var(--violet-a11);
-  --primary-a12: var(--violet-a12);
+  --color-primary-a1: var(--violet-a1);
+  --color-primary-a2: var(--violet-a2);
+  --color-primary-a3: var(--violet-a3);
+  --color-primary-a4: var(--violet-a4);
+  --color-primary-a5: var(--violet-a5);
+  --color-primary-a6: var(--violet-a6);
+  --color-primary-a7: var(--violet-a7);
+  --color-primary-a8: var(--violet-a8);
+  --color-primary-a9: var(--violet-a9);
+  --color-primary-a10: var(--violet-a10);
+  --color-primary-a11: var(--violet-a11);
+  --color-primary-a12: var(--violet-a12);
 
-  --primary-contrast: var(--violet-contrast);
-  --primary-surface: var(--violet-surface);
-  --primary-indicator: var(--violet-indicator);
-  --primary-track: var(--violet-track);
+  --color-primary-contrast: var(--violet-contrast);
+  --color-primary-surface: var(--violet-surface);
+  --color-primary-indicator: var(--violet-indicator);
+  --color-primary-track: var(--violet-track);
 }
 
 [data-secondary="violet"] {
-  --secondary-1: var(--violet-1);
-  --secondary-2: var(--violet-2);
-  --secondary-3: var(--violet-3);
-  --secondary-4: var(--violet-4);
-  --secondary-5: var(--violet-5);
-  --secondary-6: var(--violet-6);
-  --secondary-7: var(--violet-7);
-  --secondary-8: var(--violet-8);
-  --secondary-9: var(--violet-9);
-  --secondary-10: var(--violet-10);
-  --secondary-11: var(--violet-11);
-  --secondary-12: var(--violet-12);
+  --color-secondary-1: var(--violet-1);
+  --color-secondary-2: var(--violet-2);
+  --color-secondary-3: var(--violet-3);
+  --color-secondary-4: var(--violet-4);
+  --color-secondary-5: var(--violet-5);
+  --color-secondary-6: var(--violet-6);
+  --color-secondary-7: var(--violet-7);
+  --color-secondary-8: var(--violet-8);
+  --color-secondary-9: var(--violet-9);
+  --color-secondary-10: var(--violet-10);
+  --color-secondary-11: var(--violet-11);
+  --color-secondary-12: var(--violet-12);
 
-  --secondary-a1: var(--violet-a1);
-  --secondary-a2: var(--violet-a2);
-  --secondary-a3: var(--violet-a3);
-  --secondary-a4: var(--violet-a4);
-  --secondary-a5: var(--violet-a5);
-  --secondary-a6: var(--violet-a6);
-  --secondary-a7: var(--violet-a7);
-  --secondary-a8: var(--violet-a8);
-  --secondary-a9: var(--violet-a9);
-  --secondary-a10: var(--violet-a10);
-  --secondary-a11: var(--violet-a11);
-  --secondary-a12: var(--violet-a12);
+  --color-secondary-a1: var(--violet-a1);
+  --color-secondary-a2: var(--violet-a2);
+  --color-secondary-a3: var(--violet-a3);
+  --color-secondary-a4: var(--violet-a4);
+  --color-secondary-a5: var(--violet-a5);
+  --color-secondary-a6: var(--violet-a6);
+  --color-secondary-a7: var(--violet-a7);
+  --color-secondary-a8: var(--violet-a8);
+  --color-secondary-a9: var(--violet-a9);
+  --color-secondary-a10: var(--violet-a10);
+  --color-secondary-a11: var(--violet-a11);
+  --color-secondary-a12: var(--violet-a12);
 
-  --secondary-contrast: var(--violet-contrast);
-  --secondary-surface: var(--violet-surface);
-  --secondary-indicator: var(--violet-indicator);
-  --secondary-track: var(--violet-track);
+  --color-secondary-contrast: var(--violet-contrast);
+  --color-secondary-surface: var(--violet-surface);
+  --color-secondary-indicator: var(--violet-indicator);
+  --color-secondary-track: var(--violet-track);
 }
