--- a/src/styles/radix-colors/yellow.css
+++ b/src/styles/radix-colors/yellow.css
@@ -38,67 +38,67 @@
 }
 
 [data-primary="yellow"] {
-  --primary-1: var(--yellow-1);
-  --primary-2: var(--yellow-2);
-  --primary-3: var(--yellow-3);
-  --primary-4: var(--yellow-4);
-  --primary-5: var(--yellow-5);
-  --primary-6: var(--yellow-6);
-  --primary-7: var(--yellow-7);
-  --primary-8: var(--yellow-8);
-  --primary-9: var(--yellow-9);
-  --primary-10: var(--yellow-10);
-  --primary-11: var(--yellow-11);
-  --primary-12: var(--yellow-12);
+  --color-primary-1: var(--yellow-1);
+  --color-primary-2: var(--yellow-2);
+  --color-primary-3: var(--yellow-3);
+  --color-primary-4: var(--yellow-4);
+  --color-primary-5: var(--yellow-5);
+  --color-primary-6: var(--yellow-6);
+  --color-primary-7: var(--yellow-7);
+  --color-primary-8: var(--yellow-8);
+  --color-primary-9: var(--yellow-9);
+  --color-primary-10: var(--yellow-10);
+  --color-primary-11: var(--yellow-11);
+  --color-primary-12: var(--yellow-12);
 
-  --primary-a1: var(--yellow-a1);
-  --primary-a2: var(--yellow-a2);
-  --primary-a3: var(--yellow-a3);
-  --primary-a4: var(--yellow-a4);
-  --primary-a5: var(--yellow-a5);
-  --primary-a6: var(--yellow-a6);
-  --primary-a7: var(--yellow-a7);
-  --primary-a8: var(--yellow-a8);
-  --primary-a9: var(--yellow-a9);
-  --primary-a10: var(--yellow-a10);
-  --primary-a11: var(--yellow-a11);
-  --primary-a12: var(--yellow-a12);
+  --color-primary-a1: var(--yellow-a1);
+  --color-primary-a2: var(--yellow-a2);
+  --color-primary-a3: var(--yellow-a3);
+  --color-primary-a4: var(--yellow-a4);
+  --color-primary-a5: var(--yellow-a5);
+  --color-primary-a6: var(--yellow-a6);
+  --color-primary-a7: var(--yellow-a7);
+  --color-primary-a8: var(--yellow-a8);
+  --color-primary-a9: var(--yellow-a9);
+  --color-primary-a10: var(--yellow-a10);
+  --color-primary-a11: var(--yellow-a11);
+  --color-primary-a12: var(--yellow-a12);
 
-  --primary-contrast: var(--yellow-contrast);
-  --primary-surface: var(--yellow-surface);
-  --primary-indicator: var(--yellow-indicator);
-  --primary-track: var(--yellow-track);
+  --color-primary-contrast: var(--yellow-contrast);
+  --color-primary-surface: var(--yellow-surface);
+  --color-primary-indicator: var(--yellow-indicator);
+  --color-primary-track: var(--yellow-track);
 }
 
 [data-secondary="yellow"] {
-  --secondary-1: var(--yellow-1);
-  --secondary-2: var(--yellow-2);
-  --secondary-3: var(--yellow-3);
-  --secondary-4: var(--yellow-4);
-  --secondary-5: var(--yellow-5);
-  --secondary-6: var(--yellow-6);
-  --secondary-7: var(--yellow-7);
-  --secondary-8: var(--yellow-8);
-  --secondary-9: var(--yellow-9);
-  --secondary-10: var(--yellow-10);
-  --secondary-11: var(--yellow-11);
-  --secondary-12: var(--yellow-12);
+  --color-secondary-1: var(--yellow-1);
+  --color-secondary-2: var(--yellow-2);
+  --color-secondary-3: var(--yellow-3);
+  --color-secondary-4: var(--yellow-4);
+  --color-secondary-5: var(--yellow-5);
+  --color-secondary-6: var(--yellow-6);
+  --color-secondary-7: var(--yellow-7);
+  --color-secondary-8: var(--yellow-8);
+  --color-secondary-9: var(--yellow-9);
+  --color-secondary-10: var(--yellow-10);
+  --color-secondary-11: var(--yellow-11);
+  --color-secondary-12: var(--yellow-12);
 
-  --secondary-a1: var(--yellow-a1);
-  --secondary-a2: var(--yellow-a2);
-  --secondary-a3: var(--yellow-a3);
-  --secondary-a4: var(--yellow-a4);
-  --secondary-a5: var(--yellow-a5);
-  --secondary-a6: var(--yellow-a6);
-  --secondary-a7: var(--yellow-a7);
-  --secondary-a8: var(--yellow-a8);
-  --secondary-a9: var(--yellow-a9);
-  --secondary-a10: var(--yellow-a10);
-  --secondary-a11: var(--yellow-a11);
-  --secondary-a12: var(--yellow-a12);
+  --color-secondary-a1: var(--yellow-a1);
+  --color-secondary-a2: var(--yellow-a2);
+  --color-secondary-a3: var(--yellow-a3);
+  --color-secondary-a4: var(--yellow-a4);
+  --color-secondary-a5: var(--yellow-a5);
+  --color-secondary-a6: var(--yellow-a6);
+  --color-secondary-a7: var(--yellow-a7);
+  --color-secondary-a8: var(--yellow-a8);
+  --color-secondary-a9: var(--yellow-a9);
+  --color-secondary-a10: var(--yellow-a10);
+  --color-secondary-a11: var(--yellow-a11);
+  --color-secondary-a12: var(--yellow-a12);
 
-  --secondary-contrast: var(--yellow-contrast);
-  --secondary-surface: var(--yellow-surface);
-  --secondary-indicator: var(--yellow-indicator);
-  --secondary-track: var(--yellow-track);
+  --color-secondary-contrast: var(--yellow-contrast);
+  --color-secondary-surface: var(--yellow-surface);
+  --color-secondary-indicator: var(--yellow-indicator);
+  --color-secondary-track: var(--yellow-track);
 }
