--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -120,7 +120,7 @@
   // Radix colors
   [data-color-system="radix"][data-primary],
   [data-color-system="radix"] [data-primary] {
-    --fuck: var(--primary-9);
+    --fuck: var(--color-primary-9);
   }
 } */
 
@@ -206,98 +206,98 @@
   );
   --font-mono: var(--font-geist-mono);
 
-  /* --color-primary-1: var(--primary-1);
-  --color-primary-2: var(--primary-2);
-  --color-primary-3: var(--primary-3);
-  --color-primary-4: var(--primary-4);
-  --color-primary-5: var(--primary-5);
-  --color-primary-6: var(--primary-6);
-  --color-primary-7: var(--primary-7);
-  --color-primary-8: var(--primary-8);
-  --color-primary-9: var(--primary-9);
-  --color-primary-10: var(--primary-10);
-  --color-primary-11: var(--primary-11);
-  --color-primary-12: var(--primary-12);
-  --color-primary-a1: var(--primary-a1);
-  --color-primary-a2: var(--primary-a2);
-  --color-primary-a3: var(--primary-a3);
-  --color-primary-a4: var(--primary-a4);
-  --color-primary-a5: var(--primary-a5);
-  --color-primary-a6: var(--primary-a6);
-  --color-primary-a7: var(--primary-a7);
-  --color-primary-a8: var(--primary-a8);
-  --color-primary-a9: var(--primary-a9);
-  --color-primary-a10: var(--primary-a10);
-  --color-primary-a11: var(--primary-a11);
-  --color-primary-a12: var(--primary-a12);
-  --color-primary-contrast: var(--primary-contrast);
-  --color-primary-surface: var(--primary-surface);
-  --color-primary-indicator: var(--primary-indicator);
-  --color-primary-track: var(--primary-track);
-  --color-primary: var(--primary-9);
-  --color-primary-foreground: var(--primary-12);
+  --color-primary-1: var(--color-primary-1);
+  --color-primary-2: var(--color-primary-2);
+  --color-primary-3: var(--color-primary-3);
+  --color-primary-4: var(--color-primary-4);
+  --color-primary-5: var(--color-primary-5);
+  --color-primary-6: var(--color-primary-6);
+  --color-primary-7: var(--color-primary-7);
+  --color-primary-8: var(--color-primary-8);
+  --color-primary-9: var(--color-primary-9);
+  --color-primary-10: var(--color-primary-10);
+  --color-primary-11: var(--color-primary-11);
+  --color-primary-12: var(--color-primary-12);
+  --color-primary-a1: var(--color-primary-a1);
+  --color-primary-a2: var(--color-primary-a2);
+  --color-primary-a3: var(--color-primary-a3);
+  --color-primary-a4: var(--color-primary-a4);
+  --color-primary-a5: var(--color-primary-a5);
+  --color-primary-a6: var(--color-primary-a6);
+  --color-primary-a7: var(--color-primary-a7);
+  --color-primary-a8: var(--color-primary-a8);
+  --color-primary-a9: var(--color-primary-a9);
+  --color-primary-a10: var(--color-primary-a10);
+  --color-primary-a11: var(--color-primary-a11);
+  --color-primary-a12: var(--color-primary-a12);
+  --color-primary-contrast: var(--color-primary-contrast);
+  --color-primary-surface: var(--color-primary-surface);
+  --color-primary-indicator: var(--color-primary-indicator);
+  --color-primary-track: var(--color-primary-track);
+  --color-primary: var(--color-primary-9);
+  --color-primary-foreground: var(--color-primary-12);
 
-  --color-secondary-1: var(--secondary-1);
-  --color-secondary-2: var(--secondary-2);
-  --color-secondary-3: var(--secondary-3);
-  --color-secondary-4: var(--secondary-4);
-  --color-secondary-5: var(--secondary-5);
-  --color-secondary-6: var(--secondary-6);
-  --color-secondary-7: var(--secondary-7);
-  --color-secondary-8: var(--secondary-8);
-  --color-secondary-9: var(--secondary-9);
-  --color-secondary-10: var(--secondary-10);
-  --color-secondary-11: var(--secondary-11);
-  --color-secondary-12: var(--secondary-12);
-  --color-secondary-a1: var(--secondary-a1);
-  --color-secondary-a2: var(--secondary-a2);
-  --color-secondary-a3: var(--secondary-a3);
-  --color-secondary-a4: var(--secondary-a4);
-  --color-secondary-a5: var(--secondary-a5);
-  --color-secondary-a6: var(--secondary-a6);
-  --color-secondary-a7: var(--secondary-a7);
-  --color-secondary-a8: var(--secondary-a8);
-  --color-secondary-a9: var(--secondary-a9);
-  --color-secondary-a10: var(--secondary-a10);
-  --color-secondary-a11: var(--secondary-a11);
-  --color-secondary-a12: var(--secondary-a12);
-  --color-secondary-contrast: var(--secondary-contrast);
-  --color-secondary-surface: var(--secondary-surface);
-  --color-secondary-indicator: var(--secondary-indicator);
-  --color-secondary-track: var(--secondary-track);
-  --color-secondary: var(--secondary-9);
-  --color-secondary-foreground: var(--secondary-12);
+  --color-secondary-1: var(--color-secondary-1);
+  --color-secondary-2: var(--color-secondary-2);
+  --color-secondary-3: var(--color-secondary-3);
+  --color-secondary-4: var(--color-secondary-4);
+  --color-secondary-5: var(--color-secondary-5);
+  --color-secondary-6: var(--color-secondary-6);
+  --color-secondary-7: var(--color-secondary-7);
+  --color-secondary-8: var(--color-secondary-8);
+  --color-secondary-9: var(--color-secondary-9);
+  --color-secondary-10: var(--color-secondary-10);
+  --color-secondary-11: var(--color-secondary-11);
+  --color-secondary-12: var(--color-secondary-12);
+  --color-secondary-a1: var(--color-secondary-a1);
+  --color-secondary-a2: var(--color-secondary-a2);
+  --color-secondary-a3: var(--color-secondary-a3);
+  --color-secondary-a4: var(--color-secondary-a4);
+  --color-secondary-a5: var(--color-secondary-a5);
+  --color-secondary-a6: var(--color-secondary-a6);
+  --color-secondary-a7: var(--color-secondary-a7);
+  --color-secondary-a8: var(--color-secondary-a8);
+  --color-secondary-a9: var(--color-secondary-a9);
+  --color-secondary-a10: var(--color-secondary-a10);
+  --color-secondary-a11: var(--color-secondary-a11);
+  --color-secondary-a12: var(--color-secondary-a12);
+  --color-secondary-contrast: var(--color-secondary-contrast);
+  --color-secondary-surface: var(--color-secondary-surface);
+  --color-secondary-indicator: var(--color-secondary-indicator);
+  --color-secondary-track: var(--color-secondary-track);
+  --color-secondary: var(--color-secondary-9);
+  --color-secondary-foreground: var(--color-secondary-12);
 
-  --color-surface-1: var(--surface-1);
-  --color-surface-2: var(--surface-2);
-  --color-surface-3: var(--surface-3);
-  --color-surface-4: var(--surface-4);
-  --color-surface-5: var(--surface-5);
-  --color-surface-6: var(--surface-6);
-  --color-surface-7: var(--surface-7);
-  --color-surface-8: var(--surface-8);
-  --color-surface-9: var(--surface-9);
-  --color-surface-10: var(--surface-10);
-  --color-surface-11: var(--surface-11);
-  --color-surface-12: var(--surface-12);
-  --color-surface-a1: var(--surface-a1);
-  --color-surface-a2: var(--surface-a2);
-  --color-surface-a3: var(--surface-a3);
-  --color-surface-a4: var(--surface-a4);
-  --color-surface-a5: var(--surface-a5);
-  --color-surface-a6: var(--surface-a6);
-  --color-surface-a7: var(--surface-a7);
-  --color-surface-a8: var(--surface-a8);
-  --color-surface-a9: var(--surface-a9);
-  --color-surface-a10: var(--surface-a10);
-  --color-surface-a11: var(--surface-a11);
-  --color-surface-a12: var(--surface-a12);
-  --color-surface-contrast: var(--surface-contrast);
-  --color-surface-surface: var(--surface-surface);
-  --color-surface-indicator: var(--surface-indicator);
-  --color-surface-track: var(--surface-track);
-  --color-surface: var(--surface-9);
-  --color-surface-backdrop: var(--surface-backdrop); */
+  --color-surface-1: var(--color-surface-1);
+  --color-surface-2: var(--color-surface-2);
+  --color-surface-3: var(--color-surface-3);
+  --color-surface-4: var(--color-surface-4);
+  --color-surface-5: var(--color-surface-5);
+  --color-surface-6: var(--color-surface-6);
+  --color-surface-7: var(--color-surface-7);
+  --color-surface-8: var(--color-surface-8);
+  --color-surface-9: var(--color-surface-9);
+  --color-surface-10: var(--color-surface-10);
+  --color-surface-11: var(--color-surface-11);
+  --color-surface-12: var(--color-surface-12);
+  --color-surface-a1: var(--color-surface-a1);
+  --color-surface-a2: var(--color-surface-a2);
+  --color-surface-a3: var(--color-surface-a3);
+  --color-surface-a4: var(--color-surface-a4);
+  --color-surface-a5: var(--color-surface-a5);
+  --color-surface-a6: var(--color-surface-a6);
+  --color-surface-a7: var(--color-surface-a7);
+  --color-surface-a8: var(--color-surface-a8);
+  --color-surface-a9: var(--color-surface-a9);
+  --color-surface-a10: var(--color-surface-a10);
+  --color-surface-a11: var(--color-surface-a11);
+  --color-surface-a12: var(--color-surface-a12);
+  --color-surface-contrast: var(--color-surface-contrast);
+  --color-surface-surface: var(--color-surface-surface);
+  --color-surface-indicator: var(--color-surface-indicator);
+  --color-surface-track: var(--color-surface-track);
+  --color-surface: var(--color-surface-9);
+  --color-surface-backdrop: var(--color-surface-backdrop);
 
   --color-info-1: var(--info-1);
   --color-info-2: var(--info-2);
